save NNexus links

--- a/html/42-00-EveryNormedSpaceWithSchauderBasisIsSeparable.html
+++ b/html/42-00-EveryNormedSpaceWithSchauderBasisIsSeparable.html
@@ -21,13 +21,13 @@
 <p class="ltx_p">dense in</p>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">Here we show that every normed space that has a Schauder basis is
-separable (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/Separable</span>).
+<p class="ltx_p">Here we show that every <a class="nnexus_concept" href="http://mathworld.wolfram.com/NormedSpace.html">normed space</a> that has a Schauder basis is
+<a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">separable</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/separable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/separablespace"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/Separable</span>).
 Note that we are (implicitly) assuming that the normed spaces in question
 are spaces over the field <math id="p2.m1" class="ltx_Math" alttext="K" display="inline"><mi>K</mi></math> where <math id="p2.m2" class="ltx_Math" alttext="K" display="inline"><mi>K</mi></math> is either <math id="p2.m3" class="ltx_Math" alttext="\mathbb{R}" display="inline"><mi>ℝ</mi></math> or <math id="p2.m4" class="ltx_Math" alttext="\mathbb{C}" display="inline"><mi>ℂ</mi></math>.
 So let <math id="p2.m5" class="ltx_Math" alttext="(X,\left\|\cdot\right\|)" display="inline"><mrow><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mo>∥</mo><mo>⋅</mo><mo>∥</mo><mo stretchy="false">)</mo></mrow></math> be a normed space with Schauder basis,
 say <math id="p2.m6" class="ltx_Math" alttext="S=\left\{e_{1},e_{2},\dots\right\}" display="inline"><mrow><mi>S</mi><mo>=</mo><mrow><mo>{</mo><msub><mi>e</mi><mn>1</mn></msub><mo>,</mo><msub><mi>e</mi><mn>2</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>}</mo></mrow></mrow></math>.
-Notice that our notation implies that <math id="p2.m7" class="ltx_Math" alttext="S" display="inline"><mi>S</mi></math> is infinite.
+Notice that our notation implies that <math id="p2.m7" class="ltx_Math" alttext="S" display="inline"><mi>S</mi></math> is <a class="nnexus_concept" href="http://planetmath.org/extendedrealnumbers">infinite</a>.
 In finite dimensional case,
 the same proof with a slight modification will yield the result.</p>
 </div>
@@ -41,7 +41,7 @@ It remains to show that <math id="p3.m6" class="ltx_Math" alttext="Q" display="i
 <div id="p4" class="ltx_para">
 <p class="ltx_p">Let <math id="p4.m1" class="ltx_Math" alttext="\epsilon&gt;0" display="inline"><mrow><mi>ϵ</mi><mo>&gt;</mo><mn>0</mn></mrow></math>. Let <math id="p4.m2" class="ltx_Math" alttext="x\in X" display="inline"><mrow><mi>x</mi><mo>∈</mo><mi>X</mi></mrow></math>.
 By definition of Schauder basis,
-there is a sequence of scalars <math id="p4.m3" class="ltx_Math" alttext="(\alpha_{n})" display="inline"><mrow><mo stretchy="false">(</mo><msub><mi>α</mi><mi>n</mi></msub><mo stretchy="false">)</mo></mrow></math>
+there is a <a class="nnexus_concept" href="http://mathworld.wolfram.com/Sequence.html">sequence</a> of scalars <math id="p4.m3" class="ltx_Math" alttext="(\alpha_{n})" display="inline"><mrow><mo stretchy="false">(</mo><msub><mi>α</mi><mi>n</mi></msub><mo stretchy="false">)</mo></mrow></math>
 and there exists <math id="p4.m4" class="ltx_Math" alttext="N" display="inline"><mi>N</mi></math> such that for all <math id="p4.m5" class="ltx_Math" alttext="n\geq N" display="inline"><mrow><mi>n</mi><mo>≥</mo><mi>N</mi></mrow></math> we have,</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
@@ -60,7 +60,7 @@ and there exists <math id="p4.m4" class="ltx_Math" alttext="N" display="inline">
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">Furthermore, by density of <math id="p4.m6" class="ltx_Math" alttext="\mathbb{Q}" display="inline"><mi>ℚ</mi></math> in <math id="p4.m7" class="ltx_Math" alttext="\mathbb{R}" display="inline"><mi>ℝ</mi></math>,
+<p class="ltx_p">Furthermore, by <a class="nnexus_concept" href="http://planetmath.org/denseset">density</a> of <math id="p4.m6" class="ltx_Math" alttext="\mathbb{Q}" display="inline"><mi>ℚ</mi></math> in <math id="p4.m7" class="ltx_Math" alttext="\mathbb{R}" display="inline"><mi>ℝ</mi></math>,
 we know that there exist constants
 <math id="p4.m8" class="ltx_Math" alttext="a_{1},\dots,a_{N},b_{1},\dots,b_{N}" display="inline"><mrow><msub><mi>a</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>a</mi><mi>N</mi></msub><mo>,</mo><msub><mi>b</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>b</mi><mi>N</mi></msub></mrow></math> in <math id="p4.m9" class="ltx_Math" alttext="\mathbb{Q}" display="inline"><mi>ℚ</mi></math> such that,</p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
@@ -72,7 +72,7 @@ we know that there exist constants
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">By triangle inequality we obtain:</p>
+<p class="ltx_p">By <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">triangle inequality</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/triangleinequalityofcomplexnumbers"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/triangleinequality"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> we obtain:</p>
 <table id="S0.Ex4" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -94,9 +94,9 @@ we know that there exist constants
 </table>
 <p class="ltx_p">is an element of <math id="p4.m10" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> (by construction of <math id="p4.m11" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>)
 and that <math id="p4.m12" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> and <math id="p4.m13" class="ltx_Math" alttext="\epsilon" display="inline"><mi>ϵ</mi></math> were arbitrary,
-we conclude that every neighborhood of <math id="p4.m14" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> contains an element of <math id="p4.m15" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>,
+we conclude that every <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">neighborhood</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Neighborhood.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/neighborhood"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/neighborhoodofavertex"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <math id="p4.m14" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> contains an element of <math id="p4.m15" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>,
 for all <math id="p4.m16" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> in <math id="p4.m17" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>.
-This proves that <math id="p4.m18" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is dense in <math id="p4.m19" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> and completes the proof.
+This proves that <math id="p4.m18" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is dense in <math id="p4.m19" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> and <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">completes</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/ordersinanumberfield"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/completebinarytree"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/completegraph"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/complete"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> the proof.
 </p>
 <table class="ltx_tabular ltx_align_right ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
@@ -137,7 +137,7 @@ This proves that <math id="p4.m18" class="ltx_Math" alttext="Q" display="inline"
 <td class="ltx_td ltx_align_left ltx_border_r">Theorem</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_r">msc 42-00</td>
 </tr>
 <tr class="ltx_tr">
