--- a/html/42A16-CommonFourierSeries.html
+++ b/html/42A16-CommonFourierSeries.html
@@ -18,13 +18,13 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">This entry gives some examples of commonly encountered periodic functions
-and their Fourier series, with graphs to show the speed of convergence.
+<p class="ltx_p">This entry gives some examples of commonly encountered <a class="nnexus_concept" href="http://mathworld.wolfram.com/PeriodicFunction.html">periodic functions</a>
+and their <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Fourier series</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/FourierSeries.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/fouriercoefficients"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, with graphs to show the speed of <a class="nnexus_concept" href="http://mathworld.wolfram.com/Convergence.html">convergence</a>.
 </p>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">We take <math id="p2.m1" class="ltx_Math" alttext="[0,1]" display="inline"><mrow><mo stretchy="false">[</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy="false">]</mo></mrow></math> as the model interval,
-with the <math id="p2.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>th Fourier coefficient of a function <math id="p2.m3" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> defined as</p>
+<p class="ltx_p">We take <math id="p2.m1" class="ltx_Math" alttext="[0,1]" display="inline"><mrow><mo stretchy="false">[</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy="false">]</mo></mrow></math> as the model <a class="nnexus_concept" href="http://planetmath.org/interval">interval</a>,
+with the <math id="p2.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>th Fourier coefficient of a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Function.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/function"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p2.m3" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> defined as</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -33,15 +33,15 @@ with the <math id="p2.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</m
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">The parameters of the functions in the examples
+<p class="ltx_p">The <a class="nnexus_concept" href="http://mathworld.wolfram.com/Parameter.html">parameters</a> of the functions in the examples
 have been chosen to attempt to minimize
 the complexity of <math id="p2.m4" class="ltx_Math" alttext="\widehat{f}(0)" display="inline"><mrow><mover accent="true"><mi>f</mi><mo>^</mo></mover><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mn>0</mn><mo stretchy="false">)</mo></mrow></mrow></math>. But the Fourier coefficients for
 the most common  of the functions given below are easily derived
-by taking the appropriate linear transformations on the coefficients given.</p>
+by taking the appropriate linear transformations on the <a class="nnexus_concept" href="http://planetmath.org/polynomial">coefficients</a> given.</p>
 </div>
 <div id="p3" class="ltx_para">
 <p class="ltx_p">We do not dwell on the convergence of the Fourier series for each function,
-although we note that by a theorem of Dirichlet, the Fourier series for each function (each of bounded variation) converges uniformly on any compact interval where the function is continuous.</p>
+although we note that by a theorem of Dirichlet, the Fourier series for each function (each of <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">bounded variation</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/BoundedVariation.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/totalvariation"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>) <a class="nnexus_concept" href="http://planetmath.org/convergesuniformly">converges uniformly</a> on any compact interval where the function is <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">continuous</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Continuous.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/continuous"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>.</p>
 </div>
 <section id="S1" class="ltx_section">
 <h2 class="ltx_title ltx_title_section">
@@ -169,14 +169,14 @@ although we note that by a theorem of Dirichlet, the Fourier series for each fun
 </table>
 </div>
 <figure id="S3.F3" class="ltx_figure"><img src="graphs-3.eps" id="S3.F3.g1" class="ltx_graphics ltx_centering" alt="">
-<figcaption class="ltx_caption"><span class="ltx_tag ltx_tag_figure">Figure 3: </span>Triangular wave function</figcaption>
+<figcaption class="ltx_caption"><span class="ltx_tag ltx_tag_figure">Figure 3: </span><a class="nnexus_concept" href="http://planetmath.org/triangularwavefunction">Triangular wave function</a></figcaption>
 </figure>
 <div id="S3.p3" class="ltx_para ltx_align_right">
 <table class="ltx_tabular ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">common Fourier series</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/commonfourierseries">common Fourier series</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
