--- a/html/42A16-MinimalityPropertyOfFourierCoefficients.html
+++ b/html/42A16-MinimalityPropertyOfFourierCoefficients.html
@@ -20,7 +20,7 @@
 <br class="ltx_break">
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">Let <math id="p2.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> be a Riemann integrable periodic real function with period <math id="p2.m2" class="ltx_Math" alttext="2\pi" display="inline"><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></math> and <math id="p2.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> a positive integer.  Among all “trigonometric polynomials”
+<p class="ltx_p">Let <math id="p2.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> be a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Riemann integrable</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/riemannintegral"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/riemannmultipleintegral"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> periodic real function with period <math id="p2.m2" class="ltx_Math" alttext="2\pi" display="inline"><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></math> and <math id="p2.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> a <a class="nnexus_concept" href="http://mathworld.wolfram.com/PositiveInteger.html">positive integer</a>.  Among all “trigonometric polynomials”
 </p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
@@ -31,7 +31,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">the polynomial with the coefficients <math id="p2.m4" class="ltx_Math" alttext="\alpha_{j}" display="inline"><msub><mi>α</mi><mi>j</mi></msub></math> and <math id="p2.m5" class="ltx_Math" alttext="\beta_{j}" display="inline"><msub><mi>β</mi><mi>j</mi></msub></math> being the Fourier coefficients</p>
+<p class="ltx_p">the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">polynomial</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/polynomial"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/polynomialring"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> with the coefficients <math id="p2.m4" class="ltx_Math" alttext="\alpha_{j}" display="inline"><msub><mi>α</mi><mi>j</mi></msub></math> and <math id="p2.m5" class="ltx_Math" alttext="\beta_{j}" display="inline"><msub><mi>β</mi><mi>j</mi></msub></math> being the <a class="nnexus_concept" href="http://planetmath.org/fouriercoefficients">Fourier coefficients</a></p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -49,7 +49,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">for the Fourier series of <math id="p2.m6" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> produces the minimal value of the mean square deviation</p>
+<p class="ltx_p">for the <a class="nnexus_concept" href="http://mathworld.wolfram.com/FourierSeries.html">Fourier series</a> of <math id="p2.m6" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> produces the minimal value of the <a class="nnexus_concept" href="http://planetmath.org/meansquaredeviation">mean square deviation</a></p>
 <table id="S0.Ex4" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -61,7 +61,7 @@
 </table>
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_italic">Proof.</span>  For any fixed number <math id="p3.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>, it’s a question of giving the least value to the definite integral</p>
+<p class="ltx_p"><span class="ltx_text ltx_font_italic">Proof.</span>  For any fixed number <math id="p3.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>, it’s a question of giving the least value to the <a class="nnexus_concept" href="http://planetmath.org/definiteintegral">definite integral</a></p>
 <table id="A0.EGx1" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S0.E1"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -204,7 +204,7 @@ dx\;=\;0\quad\mbox{for\;\;}k\neq j." display="block"><mrow><mrow><mrow><mrow><ms
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">minimality property of Fourier coefficients</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/minimalitypropertyoffouriercoefficients">minimality property of Fourier coefficients</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
