--- a/html/42A20-UniquenessOfFourierExpansion.html
+++ b/html/42A20-UniquenessOfFourierExpansion.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">If a real function <math id="p1.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math>, Riemann integrable on the interval  <math id="p1.m2" class="ltx_Math" alttext="[-\pi,\,\pi]" display="inline"><mrow><mo stretchy="false">[</mo><mrow><mo>-</mo><mi>π</mi></mrow><mo rspace="4.2pt">,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow></math>,  may be expressed as sum of a trigonometric series</p>
+<p class="ltx_p">If a <a class="nnexus_concept" href="http://mathworld.wolfram.com/RealFunction.html">real function</a> <math id="p1.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math>, <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Riemann integrable</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/riemannintegral"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/riemannmultipleintegral"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> on the <a class="nnexus_concept" href="http://planetmath.org/interval">interval</a>  <math id="p1.m2" class="ltx_Math" alttext="[-\pi,\,\pi]" display="inline"><mrow><mo stretchy="false">[</mo><mrow><mo>-</mo><mi>π</mi></mrow><mo rspace="4.2pt">,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow></math>,  may be expressed as sum of a trigonometric series</p>
 <table id="S0.EGx1" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S0.E1"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -29,7 +29,7 @@
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(1)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">where the series <math id="p1.m3" class="ltx_Math" alttext="a_{1}\!+\!b_{1}\!+\!a_{2}\!+\!b_{2}\!+\!a_{3}\!+\!b_{3}\!+\ldots" display="inline"><mrow><mpadded width="-1.7pt"><msub><mi>a</mi><mn>1</mn></msub></mpadded><mo rspace="0.8pt">+</mo><mpadded width="-1.7pt"><msub><mi>b</mi><mn>1</mn></msub></mpadded><mo rspace="0.8pt">+</mo><mpadded width="-1.7pt"><msub><mi>a</mi><mn>2</mn></msub></mpadded><mo rspace="0.8pt">+</mo><mpadded width="-1.7pt"><msub><mi>b</mi><mn>2</mn></msub></mpadded><mo rspace="0.8pt">+</mo><mpadded width="-1.7pt"><msub><mi>a</mi><mn>3</mn></msub></mpadded><mo rspace="0.8pt">+</mo><mpadded width="-1.7pt"><msub><mi>b</mi><mn>3</mn></msub></mpadded><mo rspace="0.8pt">+</mo><mi mathvariant="normal">…</mi></mrow></math> of the coefficients converges absolutely, then the series (1) converges uniformly on the interval and can be integrated termwise (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/SumFunctionOfSeries</span>).  The same concerns apparently the series which are gotten by multiplying the equation (1) by <math id="p1.m4" class="ltx_Math" alttext="\cos{nx}" display="inline"><mrow><mi>cos</mi><mo>⁡</mo><mrow><mi>n</mi><mo>⁢</mo><mi>x</mi></mrow></mrow></math> and by <math id="p1.m5" class="ltx_Math" alttext="\sin{nx}" display="inline"><mrow><mi>sin</mi><mo>⁡</mo><mrow><mi>n</mi><mo>⁢</mo><mi>x</mi></mrow></mrow></math>;  the results of the integrations determine for the coefficients <math id="p1.m6" class="ltx_Math" alttext="a_{n}" display="inline"><msub><mi>a</mi><mi>n</mi></msub></math> and <math id="p1.m7" class="ltx_Math" alttext="b_{n}" display="inline"><msub><mi>b</mi><mi>n</mi></msub></math> the unique values</p>
+<p class="ltx_p">where the series <math id="p1.m3" class="ltx_Math" alttext="a_{1}\!+\!b_{1}\!+\!a_{2}\!+\!b_{2}\!+\!a_{3}\!+\!b_{3}\!+\ldots" display="inline"><mrow><mpadded width="-1.7pt"><msub><mi>a</mi><mn>1</mn></msub></mpadded><mo rspace="0.8pt">+</mo><mpadded width="-1.7pt"><msub><mi>b</mi><mn>1</mn></msub></mpadded><mo rspace="0.8pt">+</mo><mpadded width="-1.7pt"><msub><mi>a</mi><mn>2</mn></msub></mpadded><mo rspace="0.8pt">+</mo><mpadded width="-1.7pt"><msub><mi>b</mi><mn>2</mn></msub></mpadded><mo rspace="0.8pt">+</mo><mpadded width="-1.7pt"><msub><mi>a</mi><mn>3</mn></msub></mpadded><mo rspace="0.8pt">+</mo><mpadded width="-1.7pt"><msub><mi>b</mi><mn>3</mn></msub></mpadded><mo rspace="0.8pt">+</mo><mi mathvariant="normal">…</mi></mrow></math> of the <a class="nnexus_concept" href="http://planetmath.org/polynomial">coefficients</a> <a class="nnexus_concept" href="http://planetmath.org/convergentseries">converges absolutely</a>, then the series (1) <a class="nnexus_concept" href="http://planetmath.org/convergesuniformly">converges uniformly</a> on the interval and can be integrated termwise (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/SumFunctionOfSeries</span>).  The same concerns apparently the series which are gotten by multiplying the equation (1) by <math id="p1.m4" class="ltx_Math" alttext="\cos{nx}" display="inline"><mrow><mi>cos</mi><mo>⁡</mo><mrow><mi>n</mi><mo>⁢</mo><mi>x</mi></mrow></mrow></math> and by <math id="p1.m5" class="ltx_Math" alttext="\sin{nx}" display="inline"><mrow><mi>sin</mi><mo>⁡</mo><mrow><mi>n</mi><mo>⁢</mo><mi>x</mi></mrow></mrow></math>;  the results of the integrations determine for the coefficients <math id="p1.m6" class="ltx_Math" alttext="a_{n}" display="inline"><msub><mi>a</mi><mi>n</mi></msub></math> and <math id="p1.m7" class="ltx_Math" alttext="b_{n}" display="inline"><msub><mi>b</mi><mi>n</mi></msub></math> the unique values</p>
 <table id="S0.EGx2" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tr id="S0.Ex1" class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -45,11 +45,11 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">for any <math id="p1.m8" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>.  So the Fourier series of <math id="p1.m9" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is unique.
+<p class="ltx_p">for any <math id="p1.m8" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>.  So the <a class="nnexus_concept" href="http://mathworld.wolfram.com/FourierSeries.html">Fourier series</a> of <math id="p1.m9" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is unique.
 <br class="ltx_break"></p>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">As a consequence, we can infer that the well-known goniometric formula</p>
+<p class="ltx_p">As a consequence, we can infer that the well-known <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">goniometric formula</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/goniometricformulas"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/complexsineandcosine"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -58,14 +58,14 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">presents the Fourier series  of the even function <math id="p2.m1" class="ltx_Math" alttext="\sin^{2}{x}" display="inline"><mrow><msup><mi>sin</mi><mn>2</mn></msup><mo>⁡</mo><mi>x</mi></mrow></math>.</p>
+<p class="ltx_p">presents the Fourier series  of the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">even function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/EvenFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/evenandoddfunctions"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p2.m1" class="ltx_Math" alttext="\sin^{2}{x}" display="inline"><mrow><msup><mi>sin</mi><mn>2</mn></msup><mo>⁡</mo><mi>x</mi></mrow></math>.</p>
 </div>
 <div id="p3" class="ltx_para ltx_align_right">
 <table class="ltx_tabular ltx_align_middle">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l ltx_border_t">Title</td>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">uniqueness of Fourier expansion</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/uniquenessoffourierexpansion">uniqueness of Fourier expansion</a></td>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l">Canonical name</td>
@@ -100,7 +100,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r">Result</td>
 </tr>
 <tr class="ltx_tr">
-<td class="ltx_td ltx_align_left ltx_border_l">Classification</td>
+<td class="ltx_td ltx_align_left ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></td>
 <td class="ltx_td ltx_align_left ltx_border_r">msc 42A20</td>
 </tr>
 <tr class="ltx_tr">
