--- a/html/42A38-FourierTransform.html
+++ b/html/42A38-FourierTransform.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">The <em class="ltx_emph ltx_font_italic">Fourier transform</em> <math id="p1.m1" class="ltx_Math" alttext="F(s)" display="inline"><mrow><mi>F</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>s</mi><mo stretchy="false">)</mo></mrow></mrow></math> of a function <math id="p1.m2" class="ltx_Math" alttext="f(t)" display="inline"><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow></math> is defined as follows:</p>
+<p class="ltx_p">The <em class="ltx_emph ltx_font_italic"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Fourier transform</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/1.14#E1"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/FourierTransform.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/fouriertransform"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></em> <math id="p1.m1" class="ltx_Math" alttext="F(s)" display="inline"><mrow><mi>F</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>s</mi><mo stretchy="false">)</mo></mrow></mrow></math> of a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Function.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/function"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p1.m2" class="ltx_Math" alttext="f(t)" display="inline"><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow></math> is defined as follows:</p>
 </div>
 <div id="p2" class="ltx_para">
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
@@ -31,10 +31,10 @@
 </table>
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p">The Fourier transform exists if <math id="p3.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is Lebesgue integrable on the whole real axis.</p>
+<p class="ltx_p">The Fourier transform exists if <math id="p3.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is <a class="nnexus_concept" href="http://planetmath.org/lebesgueintegral">Lebesgue integrable</a> on the whole real axis.</p>
 </div>
 <div id="p4" class="ltx_para">
-<p class="ltx_p">If <math id="p4.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is Lebesgue integrable and can be divided into a finite number of continuous, monotone functions and at every point both one-sided limits exist, the Fourier transform can be inverted:</p>
+<p class="ltx_p">If <math id="p4.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is Lebesgue integrable and can be divided into a finite number of <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">continuous</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Continuous.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/continuous"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, <a class="nnexus_concept" href="http://mathworld.wolfram.com/MonotoneFunction.html">monotone functions</a> and at every point both <a class="nnexus_concept" href="http://planetmath.org/onesidedlimit">one-sided limits</a> exist, the Fourier transform can be inverted:</p>
 </div>
 <div id="p5" class="ltx_para">
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
@@ -47,10 +47,10 @@
 </table>
 </div>
 <div id="p6" class="ltx_para">
-<p class="ltx_p">Sometimes the Fourier transform is also defined without the factor <math id="p6.m1" class="ltx_Math" alttext="\frac{1}{\sqrt{2\pi}}" display="inline"><mfrac><mn>1</mn><msqrt><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></msqrt></mfrac></math> in one direction, but therefore giving the transform into the other direction a factor <math id="p6.m2" class="ltx_Math" alttext="\frac{1}{2\pi}" display="inline"><mfrac><mn>1</mn><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></mfrac></math>. So when looking a transform up in a table you should find out how it is defined in that table.</p>
+<p class="ltx_p">Sometimes the Fourier transform is also defined without the factor <math id="p6.m1" class="ltx_Math" alttext="\frac{1}{\sqrt{2\pi}}" display="inline"><mfrac><mn>1</mn><msqrt><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></msqrt></mfrac></math> in one direction, but therefore giving the <a class="nnexus_concept" href="http://mathworld.wolfram.com/Transform.html">transform</a> into the other direction a factor <math id="p6.m2" class="ltx_Math" alttext="\frac{1}{2\pi}" display="inline"><mfrac><mn>1</mn><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></mfrac></math>. So when looking a transform up in a table you should find out how it is defined in that table.</p>
 </div>
 <div id="p7" class="ltx_para">
-<p class="ltx_p">The Fourier transform has some important properties, that can be used when solving differential equations. We denote the Fourier transform of <math id="p7.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> with respect to <math id="p7.m2" class="ltx_Math" alttext="t" display="inline"><mi>t</mi></math> in terms of <math id="p7.m3" class="ltx_Math" alttext="s" display="inline"><mi>s</mi></math> by <math id="p7.m4" class="ltx_Math" alttext="\mathcal{F}_{t}(f)" display="inline"><mrow><msub><mi class="ltx_font_mathcaligraphic">ℱ</mi><mi>t</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>f</mi><mo stretchy="false">)</mo></mrow></mrow></math>.</p>
+<p class="ltx_p">The Fourier transform has some important <a class="nnexus_concept" href="http://planetmath.org/property">properties</a>, that can be used when solving <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">differential equations</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/DifferentialEquation.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/differentialequation"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>. We denote the Fourier transform of <math id="p7.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> with respect to <math id="p7.m2" class="ltx_Math" alttext="t" display="inline"><mi>t</mi></math> in terms of <math id="p7.m3" class="ltx_Math" alttext="s" display="inline"><mi>s</mi></math> by <math id="p7.m4" class="ltx_Math" alttext="\mathcal{F}_{t}(f)" display="inline"><mrow><msub><mi class="ltx_font_mathcaligraphic">ℱ</mi><mi>t</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>f</mi><mo stretchy="false">)</mo></mrow></mrow></math>.</p>
 <ul id="I1" class="ltx_itemize">
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
@@ -75,7 +75,7 @@
 <li id="I1.i4" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i4.p1" class="ltx_para">
-<p class="ltx_p">We define the bilateral convolution of two functions <math id="I1.i4.p1.m1" class="ltx_Math" alttext="f_{1}" display="inline"><msub><mi>f</mi><mn>1</mn></msub></math> and <math id="I1.i4.p1.m2" class="ltx_Math" alttext="f_{2}" display="inline"><msub><mi>f</mi><mn>2</mn></msub></math> as:</p>
+<p class="ltx_p">We define the bilateral <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">convolution</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Convolution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/convolution"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of two functions <math id="I1.i4.p1.m1" class="ltx_Math" alttext="f_{1}" display="inline"><msub><mi>f</mi><mn>1</mn></msub></math> and <math id="I1.i4.p1.m2" class="ltx_Math" alttext="f_{2}" display="inline"><msub><mi>f</mi><mn>2</mn></msub></math> as:</p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -98,7 +98,7 @@ t}(f_{2})." display="block"><mrow><mrow><mrow><msub><mi class="ltx_font_mathcali
 </div>
 </li>
 </ul>
-<p class="ltx_p">If <math id="p7.m5" class="ltx_Math" alttext="f(t)" display="inline"><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow></math> is some signal (maybe a  wave) then the frequency domain of <math id="p7.m6" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is given as <math id="p7.m7" class="ltx_Math" alttext="\mathcal{F}_{t}(f)" display="inline"><mrow><msub><mi class="ltx_font_mathcaligraphic">ℱ</mi><mi>t</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>f</mi><mo stretchy="false">)</mo></mrow></mrow></math>. Rayleigh’s theorem states that then the energy <math id="p7.m8" class="ltx_Math" alttext="E" display="inline"><mi>E</mi></math> carried by the signal <math id="p7.m9" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> given by:</p>
+<p class="ltx_p">If <math id="p7.m5" class="ltx_Math" alttext="f(t)" display="inline"><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow></math> is some signal (maybe a  wave) then the frequency domain of <math id="p7.m6" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is given as <math id="p7.m7" class="ltx_Math" alttext="\mathcal{F}_{t}(f)" display="inline"><mrow><msub><mi class="ltx_font_mathcaligraphic">ℱ</mi><mi>t</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>f</mi><mo stretchy="false">)</mo></mrow></mrow></math>. Rayleigh’s <a class="nnexus_concept" href="http://planetmath.org/lemma">theorem</a> states that then the energy <math id="p7.m8" class="ltx_Math" alttext="E" display="inline"><mi>E</mi></math> carried by the signal <math id="p7.m9" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> given by:</p>
 <table id="S0.Ex5" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -136,7 +136,7 @@ t}(f_{2})." display="block"><mrow><mrow><mrow><msub><mi class="ltx_font_mathcali
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Fourier transform</td>
 </tr>
 <tr class="ltx_tr">
-<td class="ltx_td ltx_align_left ltx_border_l">Canonical name</td>
+<td class="ltx_td ltx_align_left ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</td>
 <td class="ltx_td ltx_align_left ltx_border_r">FourierTransform</td>
 </tr>
 <tr class="ltx_tr">
@@ -165,7 +165,7 @@ t}(f_{2})." display="block"><mrow><mrow><mrow><msub><mi class="ltx_font_mathcali
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l">Entry type</td>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l">Classification</td>
@@ -173,7 +173,7 @@ t}(f_{2})." display="block"><mrow><mrow><mrow><msub><mi class="ltx_font_mathcali
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l">Related topic</td>
-<td class="ltx_td ltx_align_left ltx_border_r">Wavelet</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Wavelet.html">Wavelet</a></td>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l">Related topic</td>
