--- a/html/42A38-MicrolocalAnalysis.html
+++ b/html/42A38-MicrolocalAnalysis.html
@@ -18,10 +18,10 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">In mathematical analysis, <span class="ltx_text ltx_font_italic">microlocal analysis</span> is a term use to describe techniques developed from the 1950s onwards based on Fourier transforms related to the study of variable-coefficients-linear and nonlinear partial differential equations. This includes generalized functions, pseudo-differential operators, wave front sets, Fourier integral operators, and paradifferential operators.</p>
+<p class="ltx_p">In <a class="nnexus_concept" href="http://planetmath.org/topicentryonanalysis">mathematical analysis</a>, <span class="ltx_text ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/microlocalanalysis">microlocal analysis</a></span> is a term use to describe techniques developed from the 1950s onwards based on <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Fourier transforms</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/FourierTransform.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/fouriertransform"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> related to the study of variable-coefficients-linear and nonlinear partial differential equations. This includes <a class="nnexus_concept" href="http://mathworld.wolfram.com/GeneralizedFunction.html">generalized functions</a>, pseudo-differential operators, wave front sets, Fourier integral operators, and paradifferential operators.</p>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">The term microlocal implies localisation not just at a point, but in terms of cotangent space directions at a given point. This gains in importance on manifolds of dimension greater than one.</p>
+<p class="ltx_p">The term microlocal implies localisation not just at a point, but in terms of cotangent space directions at a given point. This gains in importance on manifolds of <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">dimension</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/orthonormalbasis"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/dimension"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <a class="nnexus_concept" href="http://mathworld.wolfram.com/Greater.html">greater</a> than one.</p>
 </div>
 <div id="p3" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_italic">This entry was adapted from the Wikipedia article </span><span class="ltx_text ltx_font_typewriter">http://en.wikipedia.org/wiki/Microlocal_analysis</span><span class="ltx_text ltx_font_italic">Microlocal analysis as of January 17, 2007.</span>
@@ -33,7 +33,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">microlocal analysis</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">MicrolocalAnalysis</td>
 </tr>
 <tr class="ltx_tr">
@@ -62,7 +62,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Classification</th>
