--- a/html/42A38-TableOfFourierTransforms.html
+++ b/html/42A38-TableOfFourierTransforms.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">Below are tables of Fourier transforms (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/FourierTransform</span>); one lists some of the common properties, and the other lists some common examples.</p>
+<p class="ltx_p">Below are <a class="nnexus_concept" href="http://planetmath.org/tableoffouriertransforms">tables of Fourier transforms</a> (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/FourierTransform</span>); one lists some of the common properties, and the other lists some common examples.</p>
 </div>
 <section id="S0.SS0.SSSx1" class="ltx_subsubsection">
 <h2 class="ltx_title ltx_title_subsubsection">Properties</h2>
@@ -43,7 +43,7 @@
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_center ltx_th ltx_th_row ltx_border_l ltx_border_r ltx_border_t"><math id="S0.SS0.SSSx1.p1.m3" class="ltx_Math" alttext="f(t)*g(t)" display="inline"><mrow><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow><mo>*</mo><mi>g</mi></mrow><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow></math></th>
 <th class="ltx_td ltx_align_center ltx_th ltx_th_row ltx_border_r ltx_border_t"><math id="S0.SS0.SSSx1.p1.m4" class="ltx_Math" alttext="\mathcal{F}\{f(t)\}\mathcal{F}\{g(t)\}" display="inline"><mrow><mi class="ltx_font_mathcaligraphic">ℱ</mi><mo>⁢</mo><mrow><mo stretchy="false">{</mo><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow><mo stretchy="false">}</mo></mrow><mo>⁢</mo><mi class="ltx_font_mathcaligraphic">ℱ</mi><mo>⁢</mo><mrow><mo stretchy="false">{</mo><mrow><mi>g</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow><mo stretchy="false">}</mo></mrow></mrow></math></th>
-<td class="ltx_td ltx_align_justify ltx_border_r ltx_border_t" style="width:113.8pt;">convolution property</td>
+<td class="ltx_td ltx_align_justify ltx_border_r ltx_border_t" style="width:113.8pt;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Convolution.html">convolution</a> property</td>
 <td class="ltx_td ltx_border_r ltx_border_t"></td>
 </tr>
 <tr class="ltx_tr">
@@ -56,13 +56,13 @@
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_center ltx_th ltx_th_row ltx_border_l ltx_border_r ltx_border_t"><math id="S0.SS0.SSSx1.p1.m8" class="ltx_Math" alttext="f^{\prime}(t)" display="inline"><mrow><msup><mi>f</mi><mo>′</mo></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow></math></th>
 <th class="ltx_td ltx_align_center ltx_th ltx_th_row ltx_border_r ltx_border_t"><math id="S0.SS0.SSSx1.p1.m9" class="ltx_Math" alttext="is\mathcal{F}\{f(t)\}" display="inline"><mrow><mi>i</mi><mo>⁢</mo><mi>s</mi><mo>⁢</mo><mi class="ltx_font_mathcaligraphic">ℱ</mi><mo>⁢</mo><mrow><mo stretchy="false">{</mo><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow><mo stretchy="false">}</mo></mrow></mrow></math></th>
-<td class="ltx_td ltx_align_justify ltx_border_r ltx_border_t" style="width:113.8pt;">differentiation</td>
+<td class="ltx_td ltx_align_justify ltx_border_r ltx_border_t" style="width:113.8pt;"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">differentiation</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Differentiation.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/higherorderderivatives"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></td>
 <td class="ltx_td ltx_border_r ltx_border_t"></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_center ltx_th ltx_th_row ltx_border_l ltx_border_r ltx_border_t"><math id="S0.SS0.SSSx1.p1.m10" class="ltx_Math" alttext="\overline{f(t)}" display="inline"><mover accent="true"><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow><mo>¯</mo></mover></math></th>
 <th class="ltx_td ltx_align_center ltx_th ltx_th_row ltx_border_r ltx_border_t"><math id="S0.SS0.SSSx1.p1.m11" class="ltx_Math" alttext="\overline{F(-s)}" display="inline"><mover accent="true"><mrow><mi>F</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mo>-</mo><mi>s</mi></mrow><mo stretchy="false">)</mo></mrow></mrow><mo>¯</mo></mover></math></th>
-<td class="ltx_td ltx_align_justify ltx_border_r ltx_border_t" style="width:113.8pt;">conjugation, where <math id="S0.SS0.SSSx1.p1.m12" class="ltx_Math" alttext="F(s)=\mathcal{F}\{f(t)\}" display="inline"><mrow><mrow><mi>F</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>s</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi class="ltx_font_mathcaligraphic">ℱ</mi><mo>⁢</mo><mrow><mo stretchy="false">{</mo><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow><mo stretchy="false">}</mo></mrow></mrow></mrow></math>
+<td class="ltx_td ltx_align_justify ltx_border_r ltx_border_t" style="width:113.8pt;"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">conjugation</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Conjugation.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/innerautomorphism"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, where <math id="S0.SS0.SSSx1.p1.m12" class="ltx_Math" alttext="F(s)=\mathcal{F}\{f(t)\}" display="inline"><mrow><mrow><mi>F</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>s</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi class="ltx_font_mathcaligraphic">ℱ</mi><mo>⁢</mo><mrow><mo stretchy="false">{</mo><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow><mo stretchy="false">}</mo></mrow></mrow></mrow></math>
 </td>
 <td class="ltx_td ltx_border_r ltx_border_t"></td>
 </tr>
