--- a/html/42A38-UncertaintyPrinciple.html
+++ b/html/42A38-UncertaintyPrinciple.html
@@ -20,7 +20,7 @@
 <br class="ltx_break">
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">We will find the Fourier transform</p>
+<p class="ltx_p">We will find the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Fourier transform</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/FourierTransform.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/fouriertransform"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></p>
 <table id="A0.EGx1" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S0.E1"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -31,7 +31,7 @@
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(1)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">of the Gaussian bell-shaped function</p>
+<p class="ltx_p">of the Gaussian bell-shaped <a class="nnexus_concept" href="http://planetmath.org/function">function</a></p>
 <table id="A0.EGx2" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S0.E2"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -41,7 +41,7 @@
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(2)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">where <math id="p2.m1" class="ltx_Math" alttext="C" display="inline"><mi>C</mi></math> and <math id="p2.m2" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> are positive constants.
+<p class="ltx_p">where <math id="p2.m1" class="ltx_Math" alttext="C" display="inline"><mi>C</mi></math> and <math id="p2.m2" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> are positive <a class="nnexus_concept" href="http://planetmath.org/logicallanguage">constants</a>.
 <br class="ltx_break"></p>
 </div>
 <div id="p3" class="ltx_para">
@@ -77,8 +77,8 @@
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(3)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">where <math id="p3.m2" class="ltx_Math" alttext="l" display="inline"><mi>l</mi></math> is a line of the complex plane parallel to the real axis and passing through the point
- <math id="p3.m3" class="ltx_Math" alttext="z=\frac{i\omega}{2\sqrt{a}}" display="inline"><mrow><mi>z</mi><mo>=</mo><mfrac><mrow><mi>i</mi><mo>⁢</mo><mi>ω</mi></mrow><mrow><mn>2</mn><mo>⁢</mo><msqrt><mi>a</mi></msqrt></mrow></mfrac></mrow></math>.  Now we can show that the integral</p>
+<p class="ltx_p">where <math id="p3.m2" class="ltx_Math" alttext="l" display="inline"><mi>l</mi></math> is a line of the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">complex plane</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ComplexPlane.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/complex"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> parallel to the <a class="nnexus_concept" href="http://mathworld.wolfram.com/RealAxis.html">real axis</a> and passing through the point
+ <math id="p3.m3" class="ltx_Math" alttext="z=\frac{i\omega}{2\sqrt{a}}" display="inline"><mrow><mi>z</mi><mo>=</mo><mfrac><mrow><mi>i</mi><mo>⁢</mo><mi>ω</mi></mrow><mrow><mn>2</mn><mo>⁢</mo><msqrt><mi>a</mi></msqrt></mrow></mfrac></mrow></math>.  Now we can show that the <a class="nnexus_concept" href="http://planetmath.org/lebesgueintegral">integral</a></p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -109,7 +109,7 @@ iy)\,dx\,=\,i\!\operatornamewithlimits{\Big{/}}_{\!\!\!x\,=-\infty}^{\,\quad%
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">(see the area under Gaussian curve).  Putting this value to (3) yields the result</p>
+<p class="ltx_p">(see the <a class="nnexus_concept" href="http://planetmath.org/areaundergaussiancurve">area under Gaussian curve</a>).  Putting this value to (3) yields the result</p>
 <table id="A0.EGx4" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S0.E4"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -123,7 +123,7 @@ iy)\,dx\,=\,i\!\operatornamewithlimits{\Big{/}}_{\!\!\!x\,=-\infty}^{\,\quad%
 <br class="ltx_break"></p>
 </div>
 <div id="p4" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_bold">Interpretation.</span>  One can take for the <span class="ltx_text ltx_font_italic">breadth</span> of the bell the portion of the abscissa axis, outside which the ordinate drops under the maximum value divided by <math id="p4.m1" class="ltx_Math" alttext="e" display="inline"><mi>e</mi></math>, for example.  Then, for the bell (2) one writes</p>
+<p class="ltx_p"><span class="ltx_text ltx_font_bold"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Interpretation</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Interpretation.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/structure"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/truthvaluesemanticsforclassicalpropositionallogic"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>.</span>  One can take for the <span class="ltx_text ltx_font_italic">breadth</span> of the bell the portion of the abscissa axis, outside which the ordinate drops under the <a class="nnexus_concept" href="http://mathworld.wolfram.com/Maximum.html">maximum</a> value divided by <math id="p4.m1" class="ltx_Math" alttext="e" display="inline"><mi>e</mi></math>, for example.  Then, for the bell (2) one writes</p>
 <table id="S0.Ex6" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -132,7 +132,7 @@ iy)\,dx\,=\,i\!\operatornamewithlimits{\Big{/}}_{\!\!\!x\,=-\infty}^{\,\quad%
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">whence  <math id="p4.m2" class="ltx_Math" alttext="t=\frac{1}{\sqrt{a}}" display="inline"><mrow><mi>t</mi><mo>=</mo><mfrac><mn>1</mn><msqrt><mi>a</mi></msqrt></mfrac></mrow></math>  giving, by evenness (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/EvenFunction</span>) of the function, the breadth  <math id="p4.m3" class="ltx_Math" alttext="\Delta t=\frac{2}{\sqrt{a}}" display="inline"><mrow><mrow><mi mathvariant="normal">Δ</mi><mo>⁢</mo><mi>t</mi></mrow><mo>=</mo><mfrac><mn>2</mn><msqrt><mi>a</mi></msqrt></mfrac></mrow></math>.  Similarly, the breadth of the bell (4) is  <math id="p4.m4" class="ltx_Math" alttext="\Delta\omega=4\sqrt{a}" display="inline"><mrow><mrow><mi mathvariant="normal">Δ</mi><mo>⁢</mo><mi>ω</mi></mrow><mo>=</mo><mrow><mn>4</mn><mo>⁢</mo><msqrt><mi>a</mi></msqrt></mrow></mrow></math>.  We see that the product</p>
+<p class="ltx_p">whence  <math id="p4.m2" class="ltx_Math" alttext="t=\frac{1}{\sqrt{a}}" display="inline"><mrow><mi>t</mi><mo>=</mo><mfrac><mn>1</mn><msqrt><mi>a</mi></msqrt></mfrac></mrow></math>  giving, by evenness (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/EvenFunction</span>) of the function, the breadth  <math id="p4.m3" class="ltx_Math" alttext="\Delta t=\frac{2}{\sqrt{a}}" display="inline"><mrow><mrow><mi mathvariant="normal">Δ</mi><mo>⁢</mo><mi>t</mi></mrow><mo>=</mo><mfrac><mn>2</mn><msqrt><mi>a</mi></msqrt></mfrac></mrow></math>.  Similarly, the breadth of the bell (4) is  <math id="p4.m4" class="ltx_Math" alttext="\Delta\omega=4\sqrt{a}" display="inline"><mrow><mrow><mi mathvariant="normal">Δ</mi><mo>⁢</mo><mi>ω</mi></mrow><mo>=</mo><mrow><mn>4</mn><mo>⁢</mo><msqrt><mi>a</mi></msqrt></mrow></mrow></math>.  We see that the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">product</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/product"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/cardinalarithmetic"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></p>
 <table id="A0.EGx5" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S0.E5"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -142,11 +142,11 @@ iy)\,dx\,=\,i\!\operatornamewithlimits{\Big{/}}_{\!\!\!x\,=-\infty}^{\,\quad%
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(5)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">has a constant value.  One can show that any other shape of the graphs of <math id="p4.m5" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> and <math id="p4.m6" class="ltx_Math" alttext="F" display="inline"><mi>F</mi></math> produces a relation  to (5).  The breadths are thus inversely proportional (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/Proportion</span>).
+<p class="ltx_p">has a constant value.  One can show that any other shape of the graphs of <math id="p4.m5" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> and <math id="p4.m6" class="ltx_Math" alttext="F" display="inline"><mi>F</mi></math> produces a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">relation</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Relation.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/relation"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>  to (5).  The breadths are thus inversely proportional (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/<a class="nnexus_concept" href="http://planetmath.org/proportionequation">Proportion</a></span>).
 <br class="ltx_break"></p>
 </div>
 <div id="p5" class="ltx_para">
-<p class="ltx_p">If <math id="p5.m1" class="ltx_Math" alttext="t" display="inline"><mi>t</mi></math> is the time and <math id="p5.m2" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is the  on a system of oscillators with their natural frequencies, then in the formula</p>
+<p class="ltx_p">If <math id="p5.m1" class="ltx_Math" alttext="t" display="inline"><mi>t</mi></math> is the time and <math id="p5.m2" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is the  on a system of oscillators with their natural frequencies, then in the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">formula</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Formula.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/firstorderlanguage"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></p>
 <table id="S0.Ex7" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -155,7 +155,7 @@ iy)\,dx\,=\,i\!\operatornamewithlimits{\Big{/}}_{\!\!\!x\,=-\infty}^{\,\quad%
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">of the inverse Fourier transform, <math id="p5.m3" class="ltx_Math" alttext="F(\omega)" display="inline"><mrow><mi>F</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>ω</mi><mo stretchy="false">)</mo></mrow></mrow></math> means the amplitude of the oscillator with angular frequency <math id="p5.m4" class="ltx_Math" alttext="\omega" display="inline"><mi>ω</mi></math>.  We can infer from (5) that the more localised (<math id="p5.m5" class="ltx_Math" alttext="\Delta t" display="inline"><mrow><mi mathvariant="normal">Δ</mi><mo>⁢</mo><mi>t</mi></mrow></math> small) the external force is in time, the more spread (<math id="p5.m6" class="ltx_Math" alttext="\Delta\omega" display="inline"><mrow><mi mathvariant="normal">Δ</mi><mo>⁢</mo><mi>ω</mi></mrow></math> great) is its spectrum of frequencies, i.e. the greater is the amount of the oscillators the force has excited with roughly the same amplitude.  If one, conversely, wants to better the selectivity, i.e. to compress the spectrum narrower, then one has to spread out the external action in time.  The impossibility to simultaneously localise the action in time and enhance the selectivity of the action is one of the manifestations of the quantum-mechanical <span class="ltx_text ltx_font_italic">uncertainty principle</span>, which has a fundamental role in modern physics.</p>
+<p class="ltx_p">of the inverse Fourier transform, <math id="p5.m3" class="ltx_Math" alttext="F(\omega)" display="inline"><mrow><mi>F</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>ω</mi><mo stretchy="false">)</mo></mrow></mrow></math> means the amplitude of the oscillator with angular frequency <math id="p5.m4" class="ltx_Math" alttext="\omega" display="inline"><mi>ω</mi></math>.  We can infer from (5) that the more localised (<math id="p5.m5" class="ltx_Math" alttext="\Delta t" display="inline"><mrow><mi mathvariant="normal">Δ</mi><mo>⁢</mo><mi>t</mi></mrow></math> small) the external force is in time, the more spread (<math id="p5.m6" class="ltx_Math" alttext="\Delta\omega" display="inline"><mrow><mi mathvariant="normal">Δ</mi><mo>⁢</mo><mi>ω</mi></mrow></math> great) is its spectrum of frequencies, i.e. the <a class="nnexus_concept" href="http://mathworld.wolfram.com/Greater.html">greater</a> is the amount of the oscillators the force has excited with roughly the same amplitude.  If one, <a class="nnexus_concept" href="http://planetmath.org/converse">conversely</a>, wants to better the selectivity, i.e. to compress the spectrum narrower, then one has to spread out the external action in time.  The impossibility to simultaneously localise the action in time and enhance the selectivity of the action is one of the manifestations of the quantum-mechanical <span class="ltx_text ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/uncertaintyprinciple">uncertainty principle</a></span>, which has a fundamental role in modern physics.</p>
 </div>
 <section id="bib" class="ltx_bibliography">
 <h2 class="ltx_title ltx_title_bibliography">References</h2>
