--- a/html/42A99-ProgressiveFunction.html
+++ b/html/42A99-ProgressiveFunction.html
@@ -23,7 +23,7 @@
 <h2 class="ltx_title ltx_title_paragraph">Definition</h2>
 
 <div id="S0.SS0.SSS0.Px1.p1" class="ltx_para">
-<p class="ltx_p">A function <math id="S0.SS0.SSS0.Px1.p1.m1" class="ltx_Math" alttext="f\in L^{2}(\mathbb{R})" display="inline"><mrow><mi>f</mi><mo>∈</mo><mrow><msup><mi>L</mi><mn>2</mn></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>ℝ</mi><mo stretchy="false">)</mo></mrow></mrow></mrow></math> is called <em class="ltx_emph ltx_font_italic">progressive</em> iff its Fourier transform is supported by positive frequencies only:</p>
+<p class="ltx_p">A <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Function.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/function"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="S0.SS0.SSS0.Px1.p1.m1" class="ltx_Math" alttext="f\in L^{2}(\mathbb{R})" display="inline"><mrow><mi>f</mi><mo>∈</mo><mrow><msup><mi>L</mi><mn>2</mn></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>ℝ</mi><mo stretchy="false">)</mo></mrow></mrow></mrow></math> is called <em class="ltx_emph ltx_font_italic">progressive</em> iff its <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Fourier transform</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/1.14#E1"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/FourierTransform.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/fouriertransform"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> is supported by <a class="nnexus_concept" href="http://planetmath.org/positive">positive</a> frequencies only:</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -45,10 +45,10 @@
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">progressive function</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/progressivefunction">progressive function</a></td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">ProgressiveFunction</td>
 </tr>
 <tr class="ltx_tr">
@@ -77,7 +77,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
