--- a/html/42B05-InghamInequality.html
+++ b/html/42B05-InghamInequality.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">Let <math id="p1.m1" class="ltx_Math" alttext="(t_{j})_{j\in\mathbb{Z}}" display="inline"><msub><mrow><mo stretchy="false">(</mo><msub><mi>t</mi><mi>j</mi></msub><mo stretchy="false">)</mo></mrow><mrow><mi>j</mi><mo>∈</mo><mi>ℤ</mi></mrow></msub></math> a increasing sequence of positive real numbers such that</p>
+<p class="ltx_p">Let <math id="p1.m1" class="ltx_Math" alttext="(t_{j})_{j\in\mathbb{Z}}" display="inline"><msub><mrow><mo stretchy="false">(</mo><msub><mi>t</mi><mi>j</mi></msub><mo stretchy="false">)</mo></mrow><mrow><mi>j</mi><mo>∈</mo><mi>ℤ</mi></mrow></msub></math> a <a class="nnexus_concept" href="http://mathworld.wolfram.com/IncreasingSequence.html">increasing sequence</a> of positive real numbers such that</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -27,7 +27,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">Then for all <math id="p1.m2" class="ltx_Math" alttext="n\in\mathbb{N}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></math> and for all complex sequences <math id="p1.m3" class="ltx_Math" alttext="(c_{j})_{j=-n}^{n}" display="inline"><msubsup><mrow><mo stretchy="false">(</mo><msub><mi>c</mi><mi>j</mi></msub><mo stretchy="false">)</mo></mrow><mrow><mi>j</mi><mo>=</mo><mrow><mo>-</mo><mi>n</mi></mrow></mrow><mi>n</mi></msubsup></math>, we have</p>
+<p class="ltx_p">Then for all <math id="p1.m2" class="ltx_Math" alttext="n\in\mathbb{N}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></math> and for all complex <a class="nnexus_concept" href="http://mathworld.wolfram.com/Sequence.html">sequences</a> <math id="p1.m3" class="ltx_Math" alttext="(c_{j})_{j=-n}^{n}" display="inline"><msubsup><mrow><mo stretchy="false">(</mo><msub><mi>c</mi><mi>j</mi></msub><mo stretchy="false">)</mo></mrow><mrow><mi>j</mi><mo>=</mo><mrow><mo>-</mo><mi>n</mi></mrow></mrow><mi>n</mi></msubsup></math>, we have</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -53,7 +53,7 @@
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Ingham Inequality</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/inghaminequality">Ingham Inequality</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
