--- a/html/42B05-ParsevalEquality.html
+++ b/html/42B05-ParsevalEquality.html
@@ -24,7 +24,7 @@
 <span class="ltx_tag ltx_tag_subsection">0.1 </span>Parseval’s Equality</h2>
 
 <div id="S0.SS1.p1" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_bold">Theorem. –</span> If <math id="S0.SS1.p1.m1" class="ltx_Math" alttext="\{e_{j}\!:\;j\in J\}" display="inline"><mrow><mo stretchy="false">{</mo><mpadded width="-1.7pt"><msub><mi>e</mi><mi>j</mi></msub></mpadded><mo rspace="5.3pt">:</mo><mrow><mi>j</mi><mo>∈</mo><mi>J</mi></mrow><mo stretchy="false">}</mo></mrow></math> is an orthonormal basis of an Hilbert space <math id="S0.SS1.p1.m2" class="ltx_Math" alttext="H" display="inline"><mi>H</mi></math>, then for every <math id="S0.SS1.p1.m3" class="ltx_Math" alttext="x\in H" display="inline"><mrow><mi>x</mi><mo>∈</mo><mi>H</mi></mrow></math> the following equality holds:</p>
+<p class="ltx_p"><span class="ltx_text ltx_font_bold">Theorem. –</span> If <math id="S0.SS1.p1.m1" class="ltx_Math" alttext="\{e_{j}\!:\;j\in J\}" display="inline"><mrow><mo stretchy="false">{</mo><mpadded width="-1.7pt"><msub><mi>e</mi><mi>j</mi></msub></mpadded><mo rspace="5.3pt">:</mo><mrow><mi>j</mi><mo>∈</mo><mi>J</mi></mrow><mo stretchy="false">}</mo></mrow></math> is an <a class="nnexus_concept" href="http://planetmath.org/orthonormalbasis">orthonormal basis</a> of an <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Hilbert space</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/HilbertSpace.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/hilbertspace"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="S0.SS1.p1.m2" class="ltx_Math" alttext="H" display="inline"><mi>H</mi></math>, then for every <math id="S0.SS1.p1.m3" class="ltx_Math" alttext="x\in H" display="inline"><mrow><mi>x</mi><mo>∈</mo><mi>H</mi></mrow></math> the following equality holds:</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -35,7 +35,7 @@
 </table>
 </div>
 <div id="S0.SS1.p2" class="ltx_para">
-<p class="ltx_p">The above theorem is a more sophisticated form of Bessel’s inequality (where the inequality is in fact an equality). The difference is that for Bessel’s inequality it is only required that the set <math id="S0.SS1.p2.m1" class="ltx_Math" alttext="\{e_{j}:j\in J\}" display="inline"><mrow><mo stretchy="false">{</mo><msub><mi>e</mi><mi>j</mi></msub><mo>:</mo><mrow><mi>j</mi><mo>∈</mo><mi>J</mi></mrow><mo stretchy="false">}</mo></mrow></math> is an orthonormal set, not necessarily an orthonormal basis.</p>
+<p class="ltx_p">The above theorem is a more sophisticated form of Bessel’s <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">inequality</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Inequality.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/inequalitiesforrealnumbers"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> (where the inequality is in fact an equality). The difference is that for Bessel’s inequality it is only required that the set <math id="S0.SS1.p2.m1" class="ltx_Math" alttext="\{e_{j}:j\in J\}" display="inline"><mrow><mo stretchy="false">{</mo><msub><mi>e</mi><mi>j</mi></msub><mo>:</mo><mrow><mi>j</mi><mo>∈</mo><mi>J</mi></mrow><mo stretchy="false">}</mo></mrow></math> is an <a class="nnexus_concept" href="http://planetmath.org/orthonormalset">orthonormal set</a>, not necessarily an orthonormal basis.</p>
 </div>
 </section>
 <section id="S0.SS2" class="ltx_subsection">
@@ -43,7 +43,7 @@
 <span class="ltx_tag ltx_tag_subsection">0.2 </span>Parseval’s Theorem</h2>
 
 <div id="S0.SS2.p1" class="ltx_para">
-<p class="ltx_p">Applying Parseval’s equality on the Hilbert space <math id="S0.SS2.p1.m1" class="ltx_Math" alttext="L^{2}([-\pi,\pi])" display="inline"><mrow><msup><mi>L</mi><mn>2</mn></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mo stretchy="false">[</mo><mrow><mo>-</mo><mi>π</mi></mrow><mo>,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow><mo stretchy="false">)</mo></mrow></mrow></math> (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/LpSpace</span>), of square integrable functions on the interval <math id="S0.SS2.p1.m2" class="ltx_Math" alttext="[-\pi,\pi]" display="inline"><mrow><mo stretchy="false">[</mo><mrow><mo>-</mo><mi>π</mi></mrow><mo>,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow></math>, with the orthonormal basis consisting of trigonometric functions, we obtain</p>
+<p class="ltx_p">Applying Parseval’s equality on the Hilbert space <math id="S0.SS2.p1.m1" class="ltx_Math" alttext="L^{2}([-\pi,\pi])" display="inline"><mrow><msup><mi>L</mi><mn>2</mn></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mo stretchy="false">[</mo><mrow><mo>-</mo><mi>π</mi></mrow><mo>,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow><mo stretchy="false">)</mo></mrow></mrow></math> (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/LpSpace</span>), of <a class="nnexus_concept" href="http://mathworld.wolfram.com/SquareIntegrable.html">square integrable</a> <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">functions</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Function.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/function"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> on the <a class="nnexus_concept" href="http://planetmath.org/interval">interval</a> <math id="S0.SS2.p1.m2" class="ltx_Math" alttext="[-\pi,\pi]" display="inline"><mrow><mo stretchy="false">[</mo><mrow><mo>-</mo><mi>π</mi></mrow><mo>,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow></math>, with the orthonormal basis consisting of <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">trigonometric functions</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/4#PT3"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/TrigonometricFunctions.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/definitionsintrigonometry"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, we obtain</p>
 </div>
 <div id="S0.SS2.p2" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">Theorem (Parseval’s theorem). –</span> Let <math id="S0.SS2.p2.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> be a Riemann square integrable function from <math id="S0.SS2.p2.m2" class="ltx_Math" alttext="[-\pi,\pi]" display="inline"><mrow><mo stretchy="false">[</mo><mrow><mo>-</mo><mi>π</mi></mrow><mo>,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow></math> to <math id="S0.SS2.p2.m3" class="ltx_Math" alttext="\mathbb{R}" display="inline"><mi>ℝ</mi></math>.  The following equality holds</p>
@@ -59,13 +59,13 @@
 <p class="ltx_p">where <math id="S0.SS2.p2.m4" class="ltx_Math" alttext="a_{0}^{f}" display="inline"><msubsup><mi>a</mi><mn>0</mn><mi>f</mi></msubsup></math>, <math id="S0.SS2.p2.m5" class="ltx_Math" alttext="a_{k}^{f}" display="inline"><msubsup><mi>a</mi><mi>k</mi><mi>f</mi></msubsup></math>, <math id="S0.SS2.p2.m6" class="ltx_Math" alttext="b_{k}^{f}" display="inline"><msubsup><mi>b</mi><mi>k</mi><mi>f</mi></msubsup></math> are the Fourier coefficients of the function <math id="S0.SS2.p2.m7" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math>.</p>
 </div>
 <div id="S0.SS2.p3" class="ltx_para">
-<p class="ltx_p">The function <math id="S0.SS2.p3.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> can be a Lebesgue-integrable function, if we use the Lebesgue integral in place of the Riemann integral.
+<p class="ltx_p">The function <math id="S0.SS2.p3.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> can be a Lebesgue-integrable function, if we use the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Lebesgue integral</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/LebesgueIntegral.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/lebesgueintegral"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> in place of the <a class="nnexus_concept" href="http://planetmath.org/riemannintegral">Riemann integral</a>.
 </p>
 <table class="ltx_tabular ltx_align_right ltx_align_middle">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l ltx_border_t">Title</td>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Parseval equality</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/parsevalequality">Parseval equality</a></td>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l">Canonical name</td>
@@ -105,7 +105,7 @@
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l">Synonym</td>
-<td class="ltx_td ltx_align_left ltx_border_r">Parseval equation</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ParsevalsEquation.html">Parseval equation</a></td>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l">Synonym</td>
@@ -125,7 +125,7 @@
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_b ltx_border_l">Defines</td>
-<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">Parseval theorem</td>
+<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ParsevalsTheorem.html">Parseval theorem</a></td>
 </tr>
 </tbody>
 </table>
