--- a/html/42B05-ProofOfInghamInequality.html
+++ b/html/42B05-ProofOfInghamInequality.html
@@ -135,7 +135,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">where <math id="p4.m3" class="ltx_Math" alttext="|\mathcal{O}(j,h)|\leq 1" display="inline"><mrow><mrow><mo stretchy="false">|</mo><mrow><mi class="ltx_font_mathcaligraphic">𝒪</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>j</mi><mo>,</mo><mi>h</mi><mo stretchy="false">)</mo></mrow></mrow><mo stretchy="false">|</mo></mrow><mo>≤</mo><mn>1</mn></mrow></math>. Using the definition of <math id="p4.m4" class="ltx_Math" alttext="k" display="inline"><mi>k</mi></math> and the previous inequality, we have</p>
+<p class="ltx_p">where <math id="p4.m3" class="ltx_Math" alttext="|\mathcal{O}(j,h)|\leq 1" display="inline"><mrow><mrow><mo stretchy="false">|</mo><mrow><mi class="ltx_font_mathcaligraphic">𝒪</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>j</mi><mo>,</mo><mi>h</mi><mo stretchy="false">)</mo></mrow></mrow><mo stretchy="false">|</mo></mrow><mo>≤</mo><mn>1</mn></mrow></math>. Using the <a class="nnexus_concept" href="http://planetmath.org/definition">definition</a> of <math id="p4.m4" class="ltx_Math" alttext="k" display="inline"><mi>k</mi></math> and the previous inequality, we have</p>
 <table id="S0.Ex13" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -151,10 +151,10 @@
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">proof of Ingham Inequality</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/proofofinghaminequality">proof of Ingham Inequality</a></td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">ProofOfInghamInequality</td>
 </tr>
 <tr class="ltx_tr">
