--- a/html/42B10-PlancherelsTheorem.html
+++ b/html/42B10-PlancherelsTheorem.html
@@ -24,10 +24,10 @@
 <span class="ltx_tag ltx_tag_subsection">0.1 </span>Statement of theorem</h2>
 
 <div id="S0.SS1.p1" class="ltx_para">
-<p class="ltx_p"><em class="ltx_emph ltx_font_italic">Plancherel’s Theorem</em> states that
-the unitary Fourier transform of <math id="S0.SS1.p1.m1" class="ltx_Math" alttext="\mathbf{L}^{1}" display="inline"><msup><mi>𝐋</mi><mn>1</mn></msup></math> functions
+<p class="ltx_p"><em class="ltx_emph ltx_font_italic">Plancherel’s <a class="nnexus_concept" href="http://mathworld.wolfram.com/Theorem.html">Theorem</a></em> states that
+the unitary <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Fourier transform</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/FourierTransform.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/fouriertransform"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <math id="S0.SS1.p1.m1" class="ltx_Math" alttext="\mathbf{L}^{1}" display="inline"><msup><mi>𝐋</mi><mn>1</mn></msup></math> <a class="nnexus_concept" href="http://planetmath.org/function">functions</a>
 (the Lebesgue-integrable functions (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/Integral3</span>)) on <math id="S0.SS1.p1.m2" class="ltx_Math" alttext="\mathbb{R}^{n}" display="inline"><msup><mi>ℝ</mi><mi>n</mi></msup></math>
-extends to a unitary isomorphism on <math id="S0.SS1.p1.m3" class="ltx_Math" alttext="\mathbf{L}^{2}" display="inline"><msup><mi>𝐋</mi><mn>2</mn></msup></math> (the square-integrable functions).</p>
+extends to a unitary <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">isomorphism</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Isomorphism.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/structurehomomorphism"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/homomorphismbetweenpartialalgebras"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/isomorphism"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/typesofmorphisms"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/semiautomatonhomomorphism"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> on <math id="S0.SS1.p1.m3" class="ltx_Math" alttext="\mathbf{L}^{2}" display="inline"><msup><mi>𝐋</mi><mn>2</mn></msup></math> (the square-integrable functions).</p>
 </div>
 <div id="S0.SS1.p2" class="ltx_para">
 <p class="ltx_p">Thus, the following two fundamental properties hold
@@ -45,7 +45,7 @@ for the Fourier transform <math id="S0.SS1.p2.m1" class="ltx_Math" alttext="\mat
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">The equalities are as elements of <math id="I1.i1.p1.m1" class="ltx_Math" alttext="\mathbf{L}^{2}" display="inline"><msup><mi>𝐋</mi><mn>2</mn></msup></math>; in terms of pointwise functions,
+<p class="ltx_p">The equalities are as elements of <math id="I1.i1.p1.m1" class="ltx_Math" alttext="\mathbf{L}^{2}" display="inline"><msup><mi>𝐋</mi><mn>2</mn></msup></math>; in terms of <a class="nnexus_concept" href="http://planetmath.org/pointwise">pointwise</a> functions,
 the equalities hold almost everywhere on <math id="I1.i1.p1.m2" class="ltx_Math" alttext="\mathbb{R}^{n}" display="inline"><msup><mi>ℝ</mi><mi>n</mi></msup></math>.</p>
 </div>
 </li>
@@ -74,10 +74,10 @@ g\rVert_{\mathbf{L}^{2}}^{2}=\lVert g\rVert_{\mathbf{L}^{2}}^{2}=\int_{\mathbb%
 </h2>
 
 <div id="S0.SS2.p1" class="ltx_para">
-<p class="ltx_p">The extension <math id="S0.SS2.p1.m1" class="ltx_Math" alttext="\mathcal{F}" display="inline"><mi class="ltx_font_mathcaligraphic">ℱ</mi></math> of the usual
+<p class="ltx_p">The <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">extension</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/substructure"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/extensionofafunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="S0.SS2.p1.m1" class="ltx_Math" alttext="\mathcal{F}" display="inline"><mi class="ltx_font_mathcaligraphic">ℱ</mi></math> of the usual
 Fourier transform can be described concretely as follows: given a <math id="S0.SS2.p1.m2" class="ltx_Math" alttext="\mathbf{L}^{2}" display="inline"><msup><mi>𝐋</mi><mn>2</mn></msup></math> function <math id="S0.SS2.p1.m3" class="ltx_Math" alttext="g\colon\mathbb{R}^{n}\to\mathbb{C}" display="inline"><mrow><mi>g</mi><mo>:</mo><mrow><msup><mi>ℝ</mi><mi>n</mi></msup><mo>→</mo><mi>ℂ</mi></mrow></mrow></math>,
-take any sequence <math id="S0.SS2.p1.m4" class="ltx_Math" alttext="g_{k}\colon\mathbb{R}^{n}\to\mathbb{C}" display="inline"><mrow><msub><mi>g</mi><mi>k</mi></msub><mo>:</mo><mrow><msup><mi>ℝ</mi><mi>n</mi></msup><mo>→</mo><mi>ℂ</mi></mrow></mrow></math>
-of <math id="S0.SS2.p1.m5" class="ltx_Math" alttext="\mathbf{L}^{1}" display="inline"><msup><mi>𝐋</mi><mn>1</mn></msup></math> functions that converge in <math id="S0.SS2.p1.m6" class="ltx_Math" alttext="\mathbf{L}^{2}" display="inline"><msup><mi>𝐋</mi><mn>2</mn></msup></math> to <math id="S0.SS2.p1.m7" class="ltx_Math" alttext="g" display="inline"><mi>g</mi></math>.
+take any <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">sequence</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Sequence.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/categoricalsequence"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/sequence"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="S0.SS2.p1.m4" class="ltx_Math" alttext="g_{k}\colon\mathbb{R}^{n}\to\mathbb{C}" display="inline"><mrow><msub><mi>g</mi><mi>k</mi></msub><mo>:</mo><mrow><msup><mi>ℝ</mi><mi>n</mi></msup><mo>→</mo><mi>ℂ</mi></mrow></mrow></math>
+of <math id="S0.SS2.p1.m5" class="ltx_Math" alttext="\mathbf{L}^{1}" display="inline"><msup><mi>𝐋</mi><mn>1</mn></msup></math> functions that <a class="nnexus_concept" href="http://planetmath.org/unlimitedregistermachine">converge</a> in <math id="S0.SS2.p1.m6" class="ltx_Math" alttext="\mathbf{L}^{2}" display="inline"><msup><mi>𝐋</mi><mn>2</mn></msup></math> to <math id="S0.SS2.p1.m7" class="ltx_Math" alttext="g" display="inline"><mi>g</mi></math>.
 The Fourier transforms</p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
 
@@ -107,7 +107,7 @@ common sequence of approximating sequences to take is
 </table>
 </div>
 <div id="S0.SS2.p3" class="ltx_para">
-<p class="ltx_p">The inverse Fourier transform <math id="S0.SS2.p3.m1" class="ltx_Math" alttext="\mathcal{F}^{-1}" display="inline"><msup><mi class="ltx_font_mathcaligraphic">ℱ</mi><mrow><mo>-</mo><mn>1</mn></mrow></msup></math> can be obtained in a similar way
+<p class="ltx_p">The inverse Fourier transform <math id="S0.SS2.p3.m1" class="ltx_Math" alttext="\mathcal{F}^{-1}" display="inline"><msup><mi class="ltx_font_mathcaligraphic">ℱ</mi><mrow><mo>-</mo><mn>1</mn></mrow></msup></math> can be obtained in a <a class="nnexus_concept" href="http://planetmath.org/equivalentmachines">similar</a> way
 to <math id="S0.SS2.p3.m2" class="ltx_Math" alttext="\mathcal{F}" display="inline"><mi class="ltx_font_mathcaligraphic">ℱ</mi></math>, using approximating functions <math id="S0.SS2.p3.m3" class="ltx_Math" alttext="g_{k}" display="inline"><msub><mi>g</mi><mi>k</mi></msub></math>:</p>
 <table id="S0.Ex5" class="ltx_equation ltx_eqn_table">
 
@@ -125,7 +125,7 @@ to <math id="S0.SS2.p3.m2" class="ltx_Math" alttext="\mathcal{F}" display="inlin
 <span class="ltx_tag ltx_tag_subsection">0.3 </span>Note on different conventions</h2>
 
 <div id="S0.SS3.p1" class="ltx_para">
-<p class="ltx_p">Here, we have used the convention for the Fourier transform <math id="S0.SS3.p1.m1" class="ltx_Math" alttext="\mathcal{F}" display="inline"><mi class="ltx_font_mathcaligraphic">ℱ</mi></math> that <math id="S0.SS3.p1.m2" class="ltx_Math" alttext="\xi" display="inline"><mi>ξ</mi></math> denotes “ordinary frequency”, i.e. the exponential contains factors of <math id="S0.SS3.p1.m3" class="ltx_Math" alttext="2\pi" display="inline"><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></math>. Another common convention has <math id="S0.SS3.p1.m4" class="ltx_Math" alttext="\xi" display="inline"><mi>ξ</mi></math> replaced by <math id="S0.SS3.p1.m5" class="ltx_Math" alttext="\omega" display="inline"><mi>ω</mi></math> denoting the “angular frequency”, with factors <math id="S0.SS3.p1.m6" class="ltx_Math" alttext="2\pi" display="inline"><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></math> occurring not in the exponent, but as multiplicative constants. In this case property (i) above still holds,
+<p class="ltx_p">Here, we have used the convention for the Fourier transform <math id="S0.SS3.p1.m1" class="ltx_Math" alttext="\mathcal{F}" display="inline"><mi class="ltx_font_mathcaligraphic">ℱ</mi></math> that <math id="S0.SS3.p1.m2" class="ltx_Math" alttext="\xi" display="inline"><mi>ξ</mi></math> denotes “ordinary frequency”, i.e. the exponential contains factors of <math id="S0.SS3.p1.m3" class="ltx_Math" alttext="2\pi" display="inline"><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></math>. Another common convention has <math id="S0.SS3.p1.m4" class="ltx_Math" alttext="\xi" display="inline"><mi>ξ</mi></math> replaced by <math id="S0.SS3.p1.m5" class="ltx_Math" alttext="\omega" display="inline"><mi>ω</mi></math> denoting the “angular frequency”, with factors <math id="S0.SS3.p1.m6" class="ltx_Math" alttext="2\pi" display="inline"><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></math> occurring not in the exponent, but as <a class="nnexus_concept" href="http://planetmath.org/multiplicativefunction">multiplicative</a> <a class="nnexus_concept" href="http://planetmath.org/logicallanguage">constants</a>. In this case property (i) above still holds,
 but property (ii) will not hold unless the multiplicative constants
 in front of the forward and inverse Fourier transform are chosen properly.</p>
 </div>
@@ -148,7 +148,7 @@ Gerald B. Folland. <em class="ltx_emph ltx_font_italic">Real Analysis: Modern Te
         <span class="ltx_bibtag ltx_role_refnum">Katznelson</span>
         
 <span class="ltx_bibblock">
-Yitzhak Katznelson. <em class="ltx_emph ltx_font_italic">An Introduction to Harmonic Analysis</em>, second ed. Dover Publications, 1976.
+Yitzhak Katznelson. <em class="ltx_emph ltx_font_italic">An <a class="nnexus_concept" href="http://planetmath.org/introduction">Introduction</a> to <a class="nnexus_concept" href="http://mathworld.wolfram.com/HarmonicAnalysis.html">Harmonic Analysis</a></em>, second ed. Dover Publications, 1976.
 
 </span>
       </li>
