--- a/html/42C05-ChebyshevPolynomial.html
+++ b/html/42C05-ChebyshevPolynomial.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">The <em class="ltx_emph ltx_font_italic">Chebyshev polynomials of first kind</em> are defined by the simple
+<p class="ltx_p">The <em class="ltx_emph ltx_font_italic"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Chebyshev polynomials of first kind</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/18.3#T1.t1.r8"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/ChebyshevPolynomialoftheFirstKind.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/chebyshevpolynomial"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></em> are defined by the simple
 formula</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
@@ -34,7 +34,7 @@ formula</p>
 <p class="ltx_p">It is an example of a <em class="ltx_emph ltx_font_italic">trigonometric polynomial</em>.</p>
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p">This can be seen to be a polynomial by expressing <math id="p3.m1" class="ltx_Math" alttext="\cos(kt)" display="inline"><mrow><mi>cos</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mrow><mi>k</mi><mo>⁢</mo><mi>t</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></math> as a polynomial of <math id="p3.m2" class="ltx_Math" alttext="\cos(t)" display="inline"><mrow><mi>cos</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow></math>, by using the formula for cosine of angle-sum:</p>
+<p class="ltx_p">This can be seen to be a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">polynomial</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Polynomial.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/polynomialsinalgebraicsystems"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> by expressing <math id="p3.m1" class="ltx_Math" alttext="\cos(kt)" display="inline"><mrow><mi>cos</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mrow><mi>k</mi><mo>⁢</mo><mi>t</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></math> as a polynomial of <math id="p3.m2" class="ltx_Math" alttext="\cos(t)" display="inline"><mrow><mi>cos</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow></math>, by using the formula for cosine of angle-sum:</p>
 </div>
 <div id="p4" class="ltx_para">
 <table id="S0.EGx1" class="ltx_equationgroup ltx_eqn_eqnarray ltx_eqn_table">
@@ -123,7 +123,7 @@ formula</p>
 <p class="ltx_p">for <math id="p6.m1" class="ltx_Math" alttext="n=1,\,2,\,\ldots" display="inline"><mrow><mi>n</mi><mo>=</mo><mrow><mn>1</mn><mo>,</mo><mn> 2</mn><mo rspace="4.2pt">,</mo><mi mathvariant="normal">…</mi></mrow></mrow></math></p>
 </div>
 <div id="p7" class="ltx_para">
-<p class="ltx_p">Related are the <em class="ltx_emph ltx_font_italic">Chebyshev polynomials of the second kind</em> that are
+<p class="ltx_p">Related are the <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://dlmf.nist.gov/18.3">Chebyshev polynomials</a> of the <a class="nnexus_concept" href="http://mathworld.wolfram.com/SecondKind.html">second kind</a></em> that are
 defined as</p>
 <table id="S0.Ex12" class="ltx_equation ltx_eqn_table">
 
@@ -135,7 +135,7 @@ defined as</p>
 </table>
 <p class="ltx_p">which
 can similarly be seen to be polynomials through either a similar process as the
-above or by the relation <math id="p7.m1" class="ltx_Math" alttext="U_{n-1}(t)=nT_{n}^{\prime}(t)" display="inline"><mrow><mrow><msub><mi>U</mi><mrow><mi>n</mi><mo>-</mo><mn>1</mn></mrow></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi>n</mi><mo>⁢</mo><msubsup><mi>T</mi><mi>n</mi><mo>′</mo></msubsup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow></mrow></math>.</p>
+above or by the <a class="nnexus_concept" href="http://planetmath.org/relation">relation</a> <math id="p7.m1" class="ltx_Math" alttext="U_{n-1}(t)=nT_{n}^{\prime}(t)" display="inline"><mrow><mrow><msub><mi>U</mi><mrow><mi>n</mi><mo>-</mo><mn>1</mn></mrow></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi>n</mi><mo>⁢</mo><msubsup><mi>T</mi><mi>n</mi><mo>′</mo></msubsup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow></mrow></math>.</p>
 </div>
 <div id="p8" class="ltx_para">
 <p class="ltx_p">The first few are:</p>
@@ -229,7 +229,7 @@ above or by the relation <math id="p7.m1" class="ltx_Math" alttext="U_{n-1}(t)=n
 <td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_r">msc 42C05</td>
 </tr>
 <tr class="ltx_tr">
@@ -250,7 +250,7 @@ above or by the relation <math id="p7.m1" class="ltx_Math" alttext="U_{n-1}(t)=n
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Defines</th>
-<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">Chebyshev polynomial of second kind</td>
+<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Chebyshev polynomial of second kind</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/18.3#T1.t1.r11"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/ChebyshevPolynomialoftheSecondKind.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a></sup></td>
 </tr>
 </tbody>
 </table>
