--- a/html/42C05-ChristoffelDarbouxFormula.html
+++ b/html/42C05-ChristoffelDarbouxFormula.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">Let <math id="p1.m1" class="ltx_Math" alttext="\{\phi_{i}\}_{i=0}^{n}" display="inline"><msubsup><mrow><mo stretchy="false">{</mo><msub><mi>ϕ</mi><mi>i</mi></msub><mo stretchy="false">}</mo></mrow><mrow><mi>i</mi><mo>=</mo><mn>0</mn></mrow><mi>n</mi></msubsup></math> be orthonormal polynomials (the degree of <math id="p1.m2" class="ltx_Math" alttext="\phi_{k}" display="inline"><msub><mi>ϕ</mi><mi>k</mi></msub></math> is <math id="p1.m3" class="ltx_Math" alttext="k" display="inline"><mi>k</mi></math>) and let <math id="p1.m4" class="ltx_Math" alttext="k_{n}" display="inline"><msub><mi>k</mi><mi>n</mi></msub></math> be the coefficient of <math id="p1.m5" class="ltx_Math" alttext="x^{n}" display="inline"><msup><mi>x</mi><mi>n</mi></msup></math> in <math id="p1.m6" class="ltx_Math" alttext="\phi_{n}" display="inline"><msub><mi>ϕ</mi><mi>n</mi></msub></math>. Then</p>
+<p class="ltx_p">Let <math id="p1.m1" class="ltx_Math" alttext="\{\phi_{i}\}_{i=0}^{n}" display="inline"><msubsup><mrow><mo stretchy="false">{</mo><msub><mi>ϕ</mi><mi>i</mi></msub><mo stretchy="false">}</mo></mrow><mrow><mi>i</mi><mo>=</mo><mn>0</mn></mrow><mi>n</mi></msubsup></math> be orthonormal <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">polynomials</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Polynomial.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/polynomialsinalgebraicsystems"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/polynomialring"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> (the degree of <math id="p1.m2" class="ltx_Math" alttext="\phi_{k}" display="inline"><msub><mi>ϕ</mi><mi>k</mi></msub></math> is <math id="p1.m3" class="ltx_Math" alttext="k" display="inline"><mi>k</mi></math>) and let <math id="p1.m4" class="ltx_Math" alttext="k_{n}" display="inline"><msub><mi>k</mi><mi>n</mi></msub></math> be the <a class="nnexus_concept" href="http://mathworld.wolfram.com/Coefficient.html">coefficient</a> of <math id="p1.m5" class="ltx_Math" alttext="x^{n}" display="inline"><msup><mi>x</mi><mi>n</mi></msup></math> in <math id="p1.m6" class="ltx_Math" alttext="\phi_{n}" display="inline"><msub><mi>ϕ</mi><mi>n</mi></msub></math>. Then</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -31,14 +31,14 @@
 </div>
 <div id="p2" class="ltx_para">
 <p class="ltx_p">The reason this formula is interesting is that the left-hand side is
-the integral kernel for the projection operator to the subspace spanned
+the integral kernel for the projection operator to the <a class="nnexus_concept" href="http://planetmath.org/subspacetopology">subspace</a> spanned
 by the polynomials <math id="p2.m1" class="ltx_Math" alttext="\{\phi_{i}\}_{i=0}^{n}" display="inline"><msubsup><mrow><mo stretchy="false">{</mo><msub><mi>ϕ</mi><mi>i</mi></msub><mo stretchy="false">}</mo></mrow><mrow><mi>i</mi><mo>=</mo><mn>0</mn></mrow><mi>n</mi></msubsup></math>.
 </p>
 <table class="ltx_tabular ltx_align_right ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Christoffel-Darboux formula</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Christoffel-Darboux formula</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Christoffel-DarbouxFormula.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/christoffeldarbouxformula"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
