--- a/html/42C05-OrthogonalPolynomials.html
+++ b/html/42C05-OrthogonalPolynomials.html
@@ -24,7 +24,7 @@
 <span class="ltx_tag ltx_tag_section">1 </span>Orthogonal Polynomials</h2>
 
 <div id="S1.p1" class="ltx_para">
-<p class="ltx_p">Polynomials of degree <math id="S1.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> are analytic functions that can be written in the form</p>
+<p class="ltx_p"><a class="nnexus_concept" href="http://planetmath.org/polynomial">Polynomials</a> of degree <math id="S1.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> are <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">analytic functions</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/AnalyticFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/analytic"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> that can be written in the form</p>
 </div>
 <div id="S1.p2" class="ltx_para">
 <table id="S1.Ex1" class="ltx_equation ltx_eqn_table">
@@ -37,10 +37,10 @@
 </table>
 </div>
 <div id="S1.p3" class="ltx_para">
-<p class="ltx_p">They can be differentiated and integrated for any value of <math id="S1.p3.m1" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math>, and are fully determined by the <math id="S1.p3.m2" class="ltx_Math" alttext="n+1" display="inline"><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></math> coefficients <math id="S1.p3.m3" class="ltx_Math" alttext="a_{0}\ldots a_{n}" display="inline"><mrow><msub><mi>a</mi><mn>0</mn></msub><mo>⁢</mo><mi mathvariant="normal">…</mi><mo>⁢</mo><msub><mi>a</mi><mi>n</mi></msub></mrow></math> . For this simplicity they are frequently used to approximate more complicated or unknown functions. In approximations, the necessary degree <math id="S1.p3.m4" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> of the polynomial is not normally defined by criteria other than the quality of the approximation.</p>
+<p class="ltx_p">They can be differentiated and integrated for any value of <math id="S1.p3.m1" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math>, and are fully determined by the <math id="S1.p3.m2" class="ltx_Math" alttext="n+1" display="inline"><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></math> coefficients <math id="S1.p3.m3" class="ltx_Math" alttext="a_{0}\ldots a_{n}" display="inline"><mrow><msub><mi>a</mi><mn>0</mn></msub><mo>⁢</mo><mi mathvariant="normal">…</mi><mo>⁢</mo><msub><mi>a</mi><mi>n</mi></msub></mrow></math> . For this simplicity they are frequently used to approximate more complicated or unknown <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">functions</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Function.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/function"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>. In <a class="nnexus_concept" href="http://planetmath.org/approximation">approximations</a>, the necessary degree <math id="S1.p3.m4" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> of the polynomial is not normally defined by criteria other than the quality of the approximation.</p>
 </div>
 <div id="S1.p4" class="ltx_para">
-<p class="ltx_p">Using polynomials as defined above tends to lead into numerical difficulties when determining the <math id="S1.p4.m1" class="ltx_Math" alttext="a_{i}" display="inline"><msub><mi>a</mi><mi>i</mi></msub></math>, even for small values of <math id="S1.p4.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>. It is therefore customary to stabilize results numerically by using orthogonal polynomials over an interval <math id="S1.p4.m3" class="ltx_Math" alttext="[a,b]" display="inline"><mrow><mo stretchy="false">[</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow></math>, defined with respect to a positive weighting function <math id="S1.p4.m4" class="ltx_Math" alttext="W(x)&gt;0" display="inline"><mrow><mrow><mi>W</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>&gt;</mo><mn>0</mn></mrow></math> by</p>
+<p class="ltx_p">Using polynomials as defined above tends to lead into numerical difficulties when determining the <math id="S1.p4.m1" class="ltx_Math" alttext="a_{i}" display="inline"><msub><mi>a</mi><mi>i</mi></msub></math>, even for small values of <math id="S1.p4.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>. It is therefore customary to stabilize results numerically by using <a class="nnexus_concept" href="http://planetmath.org/orthogonalpolynomials">orthogonal polynomials</a> over an <a class="nnexus_concept" href="http://planetmath.org/interval">interval</a> <math id="S1.p4.m3" class="ltx_Math" alttext="[a,b]" display="inline"><mrow><mo stretchy="false">[</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow></math>, defined with respect to a <a class="nnexus_concept" href="http://planetmath.org/positive">positive</a> <a class="nnexus_concept" href="http://mathworld.wolfram.com/WeightingFunction.html">weighting function</a> <math id="S1.p4.m4" class="ltx_Math" alttext="W(x)&gt;0" display="inline"><mrow><mrow><mi>W</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>&gt;</mo><mn>0</mn></mrow></math> by</p>
 </div>
 <div id="S1.p5" class="ltx_para">
 <table id="S1.Ex2" class="ltx_equation ltx_eqn_table">
@@ -66,7 +66,7 @@
 </table>
 </div>
 <div id="S1.p8" class="ltx_para">
-<p class="ltx_p">between the functions <math id="S1.p8.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> and <math id="S1.p8.m2" class="ltx_Math" alttext="g" display="inline"><mi>g</mi></math>, where <math id="S1.p8.m3" class="ltx_Math" alttext="W(x)" display="inline"><mrow><mi>W</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> is a weight factor. Starting with the polynomials <math id="S1.p8.m4" class="ltx_Math" alttext="p_{0}(x)=1" display="inline"><mrow><mrow><msub><mi>p</mi><mn>0</mn></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mn>1</mn></mrow></math>, <math id="S1.p8.m5" class="ltx_Math" alttext="p_{1}(x)=x" display="inline"><mrow><mrow><msub><mi>p</mi><mn>1</mn></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mi>x</mi></mrow></math>, <math id="S1.p8.m6" class="ltx_Math" alttext="p_{2}(x)=x^{2}" display="inline"><mrow><mrow><msub><mi>p</mi><mn>2</mn></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><msup><mi>x</mi><mn>2</mn></msup></mrow></math>, etc., from the Gram-Schmidt decomposition one obtains a sequence of orthogonal polynomials <math id="S1.p8.m7" class="ltx_Math" alttext="q_{0}(x),q_{1}(x),\ldots" display="inline"><mrow><mrow><msub><mi>q</mi><mn>0</mn></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>,</mo><mrow><msub><mi>q</mi><mn>1</mn></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>,</mo><mi mathvariant="normal">…</mi></mrow></math>, such that <math id="S1.p8.m8" class="ltx_Math" alttext="(q_{m},q_{n})=N_{n}\delta_{mn}" display="inline"><mrow><mrow><mo stretchy="false">(</mo><msub><mi>q</mi><mi>m</mi></msub><mo>,</mo><msub><mi>q</mi><mi>n</mi></msub><mo stretchy="false">)</mo></mrow><mo>=</mo><mrow><msub><mi>N</mi><mi>n</mi></msub><mo>⁢</mo><msub><mi>δ</mi><mrow><mi>m</mi><mo>⁢</mo><mi>n</mi></mrow></msub></mrow></mrow></math>. The normalization factors <math id="S1.p8.m9" class="ltx_Math" alttext="N_{n}" display="inline"><msub><mi>N</mi><mi>n</mi></msub></math> are arbitrary. When all <math id="S1.p8.m10" class="ltx_Math" alttext="N_{i}" display="inline"><msub><mi>N</mi><mi>i</mi></msub></math> are equal to one, the polynomials are called orthonormal.</p>
+<p class="ltx_p">between the functions <math id="S1.p8.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> and <math id="S1.p8.m2" class="ltx_Math" alttext="g" display="inline"><mi>g</mi></math>, where <math id="S1.p8.m3" class="ltx_Math" alttext="W(x)" display="inline"><mrow><mi>W</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> is a weight factor. Starting with the polynomials <math id="S1.p8.m4" class="ltx_Math" alttext="p_{0}(x)=1" display="inline"><mrow><mrow><msub><mi>p</mi><mn>0</mn></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mn>1</mn></mrow></math>, <math id="S1.p8.m5" class="ltx_Math" alttext="p_{1}(x)=x" display="inline"><mrow><mrow><msub><mi>p</mi><mn>1</mn></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mi>x</mi></mrow></math>, <math id="S1.p8.m6" class="ltx_Math" alttext="p_{2}(x)=x^{2}" display="inline"><mrow><mrow><msub><mi>p</mi><mn>2</mn></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><msup><mi>x</mi><mn>2</mn></msup></mrow></math>, etc., from the <a class="nnexus_concept" href="http://planetmath.org/gramschmidtorthogonalization">Gram-Schmidt decomposition</a> one obtains a sequence of orthogonal polynomials <math id="S1.p8.m7" class="ltx_Math" alttext="q_{0}(x),q_{1}(x),\ldots" display="inline"><mrow><mrow><msub><mi>q</mi><mn>0</mn></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>,</mo><mrow><msub><mi>q</mi><mn>1</mn></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>,</mo><mi mathvariant="normal">…</mi></mrow></math>, such that <math id="S1.p8.m8" class="ltx_Math" alttext="(q_{m},q_{n})=N_{n}\delta_{mn}" display="inline"><mrow><mrow><mo stretchy="false">(</mo><msub><mi>q</mi><mi>m</mi></msub><mo>,</mo><msub><mi>q</mi><mi>n</mi></msub><mo stretchy="false">)</mo></mrow><mo>=</mo><mrow><msub><mi>N</mi><mi>n</mi></msub><mo>⁢</mo><msub><mi>δ</mi><mrow><mi>m</mi><mo>⁢</mo><mi>n</mi></mrow></msub></mrow></mrow></math>. The normalization factors <math id="S1.p8.m9" class="ltx_Math" alttext="N_{n}" display="inline"><msub><mi>N</mi><mi>n</mi></msub></math> are arbitrary. When all <math id="S1.p8.m10" class="ltx_Math" alttext="N_{i}" display="inline"><msub><mi>N</mi><mi>i</mi></msub></math> are equal to one, the polynomials are called <a class="nnexus_concept" href="http://planetmath.org/orthonormalset">orthonormal</a>.</p>
 </div>
 <div id="S1.p9" class="ltx_para">
 <p class="ltx_p">Some important orthogonal polynomials are:</p>
@@ -86,25 +86,25 @@
 <td class="ltx_td ltx_align_center ltx_border_t">-1</td>
 <td class="ltx_td ltx_align_center ltx_border_t">1</td>
 <td class="ltx_td ltx_align_center ltx_border_t">1</td>
-<td class="ltx_td ltx_align_left ltx_border_t">Legendre polynomials</td>
+<td class="ltx_td ltx_align_left ltx_border_t"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Legendre polynomials</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/18.3"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://dlmf.nist.gov/18.3#T1.t1.r25"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/LegendrePolynomial.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/legendrepolynomial"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></td>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_center">-1</td>
 <td class="ltx_td ltx_align_center">1</td>
 <td class="ltx_td ltx_align_center"><math id="S1.p10.m4" class="ltx_Math" alttext="(1-x^{2})^{-1/2}" display="inline"><msup><mrow><mo stretchy="false">(</mo><mrow><mn>1</mn><mo>-</mo><msup><mi>x</mi><mn>2</mn></msup></mrow><mo stretchy="false">)</mo></mrow><mrow><mo>-</mo><mrow><mn>1</mn><mo>/</mo><mn>2</mn></mrow></mrow></msup></math></td>
-<td class="ltx_td ltx_align_left">Chebyshev polynomials</td>
+<td class="ltx_td ltx_align_left"><a class="nnexus_concept" href="http://planetmath.org/chebyshevpolynomial">Chebyshev polynomials</a></td>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_center"><math id="S1.p10.m5" class="ltx_Math" alttext="-\infty" display="inline"><mrow><mo>-</mo><mi mathvariant="normal">∞</mi></mrow></math></td>
 <td class="ltx_td ltx_align_center"><math id="S1.p10.m6" class="ltx_Math" alttext="\infty" display="inline"><mi mathvariant="normal">∞</mi></math></td>
 <td class="ltx_td ltx_align_center"><math id="S1.p10.m7" class="ltx_Math" alttext="e^{-x^{2}}" display="inline"><msup><mi>e</mi><mrow><mo>-</mo><msup><mi>x</mi><mn>2</mn></msup></mrow></msup></math></td>
-<td class="ltx_td ltx_align_left">Hermite polynomials</td>
+<td class="ltx_td ltx_align_left"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Hermite polynomials</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/HermitePolynomial.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/hermitepolynomials"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></td>
 </tr>
 </tbody>
 </table>
 </div>
 <div id="S1.p11" class="ltx_para">
-<p class="ltx_p">Orthogonal polynomials of successive orders can be expressed by a recurrence relation</p>
+<p class="ltx_p">Orthogonal polynomials of successive orders can be expressed by a <a class="nnexus_concept" href="http://mathworld.wolfram.com/RecurrenceRelation.html">recurrence relation</a></p>
 </div>
 <div id="S1.p12" class="ltx_para">
 <table id="S1.Ex4" class="ltx_equation ltx_eqn_table">
@@ -133,7 +133,7 @@
 <p class="ltx_p">with arbitrary coefficients <math id="S1.p15.m1" class="ltx_Math" alttext="a_{i}" display="inline"><msub><mi>a</mi><mi>i</mi></msub></math>, without computing explicitly every polynomial <math id="S1.p15.m2" class="ltx_Math" alttext="p_{j}" display="inline"><msub><mi>p</mi><mi>j</mi></msub></math> (Horner’s Rule).</p>
 </div>
 <div id="S1.p16" class="ltx_para">
-<p class="ltx_p">Chebyshev polynomials <math id="S1.p16.m1" class="ltx_Math" alttext="T_{n}(x)" display="inline"><mrow><msub><mi>T</mi><mi>n</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> are also orthogonal with respect to discrete values <math id="S1.p16.m2" class="ltx_Math" alttext="x_{i}" display="inline"><msub><mi>x</mi><mi>i</mi></msub></math>:</p>
+<p class="ltx_p">Chebyshev polynomials <math id="S1.p16.m1" class="ltx_Math" alttext="T_{n}(x)" display="inline"><mrow><msub><mi>T</mi><mi>n</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> are also <a class="nnexus_concept" href="http://planetmath.org/orthogonal">orthogonal</a> with respect to discrete values <math id="S1.p16.m2" class="ltx_Math" alttext="x_{i}" display="inline"><msub><mi>x</mi><mi>i</mi></msub></math>:</p>
 </div>
 <div id="S1.p17" class="ltx_para">
 <table id="S1.Ex6" class="ltx_equation ltx_eqn_table">
@@ -193,7 +193,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">orthogonal polynomials</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">OrthogonalPolynomials</td>
 </tr>
 <tr class="ltx_tr">
@@ -222,7 +222,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
