--- a/html/42C05-PropertiesOfOrthogonalPolynomials.html
+++ b/html/42C05-PropertiesOfOrthogonalPolynomials.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">A countable <em class="ltx_emph ltx_font_italic">system of orthogonal polynomials</em></p>
+<p class="ltx_p">A countable <em class="ltx_emph ltx_font_italic">system of <a class="nnexus_concept" href="http://planetmath.org/orthogonalpolynomials">orthogonal polynomials</a></em></p>
 <table id="S0.EGx1" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S0.E1"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -28,7 +28,7 @@
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(1)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">on an interval  <math id="p1.m1" class="ltx_Math" alttext="[a,\,b]" display="inline"><mrow><mo stretchy="false">[</mo><mi>a</mi><mo rspace="4.2pt">,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow></math>,  where a inner product of two functions</p>
+<p class="ltx_p">on an interval  <math id="p1.m1" class="ltx_Math" alttext="[a,\,b]" display="inline"><mrow><mo stretchy="false">[</mo><mi>a</mi><mo rspace="4.2pt">,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow></math>,  where a <a class="nnexus_concept" href="http://planetmath.org/innerproduct">inner product</a> of two <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">functions</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Function.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/function"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -37,7 +37,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">is defined with respect to a weighting function <math id="p1.m2" class="ltx_Math" alttext="W(x)" display="inline"><mrow><mi>W</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math>, satisfies the orthogonality condition (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/OrthogonalVectors</span>)</p>
+<p class="ltx_p">is defined with respect to a <a class="nnexus_concept" href="http://mathworld.wolfram.com/WeightingFunction.html">weighting function</a> <math id="p1.m2" class="ltx_Math" alttext="W(x)" display="inline"><mrow><mi>W</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math>, satisfies the <a class="nnexus_concept" href="http://mathworld.wolfram.com/OrthogonalityCondition.html">orthogonality condition</a> (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/OrthogonalVectors</span>)</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -58,7 +58,7 @@
 <br class="ltx_break">
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">Such a system (1) may be used as basis for the vector space of functions defined on  <math id="p2.m1" class="ltx_Math" alttext="[a,\,b]" display="inline"><mrow><mo stretchy="false">[</mo><mi>a</mi><mo rspace="4.2pt">,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow></math>, i.e. certain such functions <math id="p2.m2" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> may be expanded as a series (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/FunctionSeries</span>)</p>
+<p class="ltx_p">Such a system (1) may be used as basis for the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">vector space</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/VectorSpace.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/vectorspace"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of functions defined on  <math id="p2.m1" class="ltx_Math" alttext="[a,\,b]" display="inline"><mrow><mo stretchy="false">[</mo><mi>a</mi><mo rspace="4.2pt">,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow></math>, i.e. certain such functions <math id="p2.m2" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> may be expanded as a series (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/FunctionSeries</span>)</p>
 <table id="S0.Ex4" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -67,7 +67,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">where the coefficients <math id="p2.m3" class="ltx_Math" alttext="c_{n}" display="inline"><msub><mi>c</mi><mi>n</mi></msub></math> have the expression</p>
+<p class="ltx_p">where the coefficients <math id="p2.m3" class="ltx_Math" alttext="c_{n}" display="inline"><msub><mi>c</mi><mi>n</mi></msub></math> have the <a class="nnexus_concept" href="http://planetmath.org/expression">expression</a></p>
 <table id="S0.Ex5" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -79,14 +79,14 @@
 <br class="ltx_break">
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_bold">Other properties</span></p>
+<p class="ltx_p"><span class="ltx_text ltx_font_bold">Other <a class="nnexus_concept" href="http://planetmath.org/property">properties</a></span></p>
 </div>
 <div id="p4" class="ltx_para">
 <ul id="I1" class="ltx_itemize">
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i1.p1" class="ltx_para">
-<p class="ltx_p">The basis property of the system (1) comprises that any polynomial <math id="I1.i1.p1.m1" class="ltx_Math" alttext="P(x)" display="inline"><mrow><mi>P</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> of degree <math id="I1.i1.p1.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> can be uniquely expressed as a finite linear combination<math id="I1.i1.p1.m3" class="ltx_Math" alttext="\!" display="inline"><mi></mi></math></p>
+<p class="ltx_p">The basis property of the system (1) comprises that any <a class="nnexus_concept" href="http://planetmath.org/polynomialring">polynomial</a> <math id="I1.i1.p1.m1" class="ltx_Math" alttext="P(x)" display="inline"><mrow><mi>P</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> of degree <math id="I1.i1.p1.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> can be uniquely expressed as a finite <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">linear combination</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/LinearCombination.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/linearcombination"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup><math id="I1.i1.p1.m3" class="ltx_Math" alttext="\!" display="inline"><mi></mi></math></p>
 <table id="S0.Ex6" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -100,7 +100,7 @@
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i2.p1" class="ltx_para">
-<p class="ltx_p">Every member <math id="I1.i2.p1.m1" class="ltx_Math" alttext="p_{n}(x)" display="inline"><mrow><msub><mi>p</mi><mi>n</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> of (1) is orthogonal to any polynomial <math id="I1.i2.p1.m2" class="ltx_Math" alttext="P(x)" display="inline"><mrow><mi>P</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> of degree less than <math id="I1.i2.p1.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>.</p>
+<p class="ltx_p">Every member <math id="I1.i2.p1.m1" class="ltx_Math" alttext="p_{n}(x)" display="inline"><mrow><msub><mi>p</mi><mi>n</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> of (1) is <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">orthogonal</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Orthogonal.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/orthogonal"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> to any polynomial <math id="I1.i2.p1.m2" class="ltx_Math" alttext="P(x)" display="inline"><mrow><mi>P</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> of degree less than <math id="I1.i2.p1.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>.</p>
 </div>
 </li>
 <li id="I1.i3" class="ltx_item" style="list-style-type:none;">
@@ -121,13 +121,13 @@
 <li id="I1.i4" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i4.p1" class="ltx_para">
-<p class="ltx_p">The zeros of <math id="I1.i4.p1.m1" class="ltx_Math" alttext="p_{n}(x)" display="inline"><mrow><msub><mi>p</mi><mi>n</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> are all real and belong to the open interval  <math id="I1.i4.p1.m2" class="ltx_Math" alttext="(a,\,b)" display="inline"><mrow><mo stretchy="false">(</mo><mi>a</mi><mo rspace="4.2pt">,</mo><mi>b</mi><mo stretchy="false">)</mo></mrow></math>;  between two of those zeros there are always zeros of <math id="I1.i4.p1.m3" class="ltx_Math" alttext="p_{n+1}(x)" display="inline"><mrow><msub><mi>p</mi><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math>.</p>
+<p class="ltx_p">The zeros of <math id="I1.i4.p1.m1" class="ltx_Math" alttext="p_{n}(x)" display="inline"><mrow><msub><mi>p</mi><mi>n</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> are all real and belong to the <a class="nnexus_concept" href="http://dlmf.nist.gov/front/introduction#Sx4.p1.t1.r28">open interval</a>  <math id="I1.i4.p1.m2" class="ltx_Math" alttext="(a,\,b)" display="inline"><mrow><mo stretchy="false">(</mo><mi>a</mi><mo rspace="4.2pt">,</mo><mi>b</mi><mo stretchy="false">)</mo></mrow></math>;  between two of those zeros there are always zeros of <math id="I1.i4.p1.m3" class="ltx_Math" alttext="p_{n+1}(x)" display="inline"><mrow><msub><mi>p</mi><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math>.</p>
 </div>
 </li>
 <li id="I1.i5" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i5.p1" class="ltx_para">
-<p class="ltx_p">The Sturm–Liouville differential equation</p>
+<p class="ltx_p">The Sturm–Liouville <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">differential equation</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/DifferentialEquation.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/differentialequation"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></p>
 <table id="S0.EGx2" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S0.E2"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -137,7 +137,7 @@
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(2)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">where <math id="I1.i5.p1.m1" class="ltx_Math" alttext="Q(x)" display="inline"><mrow><mi>Q</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> is a polynomial of at most degree 2 and <math id="I1.i5.p1.m2" class="ltx_Math" alttext="L(x)" display="inline"><mrow><mi>L</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> a linear polynomial, gives under certain conditions, as <span class="ltx_text ltx_font_typewriter">http://planetmath.org/node/8719</span>solutions <math id="I1.i5.p1.m3" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> a system of orthogonal polynomials <math id="I1.i5.p1.m4" class="ltx_Math" alttext="p_{0},\,p_{1},\,\ldots" display="inline"><mrow><msub><mi>p</mi><mn>0</mn></msub><mo rspace="4.2pt">,</mo><msub><mi>p</mi><mn>1</mn></msub><mo rspace="4.2pt">,</mo><mi mathvariant="normal">…</mi></mrow></math>  corresponding suitable values (eigenvalues) <math id="I1.i5.p1.m5" class="ltx_Math" alttext="\lambda_{0},\,\lambda_{1},\,\ldots" display="inline"><mrow><msub><mi>λ</mi><mn>0</mn></msub><mo rspace="4.2pt">,</mo><msub><mi>λ</mi><mn>1</mn></msub><mo rspace="4.2pt">,</mo><mi mathvariant="normal">…</mi></mrow></math>  of the parametre <math id="I1.i5.p1.m6" class="ltx_Math" alttext="\lambda" display="inline"><mi>λ</mi></math>.  Those  satisfy the Rodrigues formula</p>
+<p class="ltx_p">where <math id="I1.i5.p1.m1" class="ltx_Math" alttext="Q(x)" display="inline"><mrow><mi>Q</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> is a polynomial of at most degree 2 and <math id="I1.i5.p1.m2" class="ltx_Math" alttext="L(x)" display="inline"><mrow><mi>L</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> a linear polynomial, gives under certain conditions, as <span class="ltx_text ltx_font_typewriter">http://planetmath.org/node/8719</span>solutions <math id="I1.i5.p1.m3" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> a system of orthogonal polynomials <math id="I1.i5.p1.m4" class="ltx_Math" alttext="p_{0},\,p_{1},\,\ldots" display="inline"><mrow><msub><mi>p</mi><mn>0</mn></msub><mo rspace="4.2pt">,</mo><msub><mi>p</mi><mn>1</mn></msub><mo rspace="4.2pt">,</mo><mi mathvariant="normal">…</mi></mrow></math>  corresponding suitable values (<a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">eigenvalues</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Eigenvalue.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/eigenvalue"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/spectralvaluesclassification"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/characteristicvaluesandvectorsofamatrix"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/eigenvalue1"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>) <math id="I1.i5.p1.m5" class="ltx_Math" alttext="\lambda_{0},\,\lambda_{1},\,\ldots" display="inline"><mrow><msub><mi>λ</mi><mn>0</mn></msub><mo rspace="4.2pt">,</mo><msub><mi>λ</mi><mn>1</mn></msub><mo rspace="4.2pt">,</mo><mi mathvariant="normal">…</mi></mrow></math>  of the <a class="nnexus_concept" href="http://planetmath.org/parametre">parametre</a> <math id="I1.i5.p1.m6" class="ltx_Math" alttext="\lambda" display="inline"><mi>λ</mi></math>.  Those  satisfy the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Rodrigues formula</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/legendrepolynomial"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/propertiesoforthogonalpolynomials"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></p>
 <table id="S0.Ex8" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -155,7 +155,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">The classical Chebyshev (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/ChebyshevPolynomial</span>), Hermite (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/HermitePolynomials</span>), Laguerre (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/LaguerrePolynomial</span>), and Legendre polynomials all satisfy an equation (2).</p>
+<p class="ltx_p">The classical Chebyshev (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/ChebyshevPolynomial</span>), Hermite (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/HermitePolynomials</span>), Laguerre (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/LaguerrePolynomial</span>), and <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Legendre polynomials</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/18.3"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://dlmf.nist.gov/18.3#T1.t1.r25"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/LegendrePolynomial.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a></sup> all satisfy an equation (2).</p>
 </div>
 </li>
 </ul>
@@ -170,7 +170,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">properties of orthogonal polynomials</td>
 </tr>
 <tr class="ltx_tr">
-<td class="ltx_td ltx_align_left ltx_border_l">Canonical name</td>
+<td class="ltx_td ltx_align_left ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</td>
 <td class="ltx_td ltx_align_left ltx_border_r">PropertiesOfOrthogonalPolynomials</td>
 </tr>
 <tr class="ltx_tr">
