--- a/html/42-00-CountableBasis.html
+++ b/html/42-00-CountableBasis.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">A <span class="ltx_text ltx_font_italic">countable basis</span> <math id="p1.m1" class="ltx_Math" alttext="\beta" display="inline"><mi>β</mi></math> of a vector space <math id="p1.m2" class="ltx_Math" alttext="V" display="inline"><mi>V</mi></math> over a field <math id="p1.m3" class="ltx_Math" alttext="F" display="inline"><mi>F</mi></math> is a countable subset <math id="p1.m4" class="ltx_Math" alttext="\beta\subset V" display="inline"><mrow><mi>β</mi><mo>⊂</mo><mi>V</mi></mrow></math> with the property that every element <math id="p1.m5" class="ltx_Math" alttext="v\in V" display="inline"><mrow><mi>v</mi><mo>∈</mo><mi>V</mi></mrow></math> can be written as an infinite series</p>
+<p class="ltx_p">A <span class="ltx_text ltx_font_italic">countable basis</span> <math id="p1.m1" class="ltx_Math" alttext="\beta" display="inline"><mi>β</mi></math> of a vector space <math id="p1.m2" class="ltx_Math" alttext="V" display="inline"><mi>V</mi></math> over a field <math id="p1.m3" class="ltx_Math" alttext="F" display="inline"><mi>F</mi></math> is a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">countable</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Countable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/countable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> subset <math id="p1.m4" class="ltx_Math" alttext="\beta\subset V" display="inline"><mrow><mi>β</mi><mo>⊂</mo><mi>V</mi></mrow></math> with the <a class="nnexus_concept" href="http://planetmath.org/property">property</a> that every <a class="nnexus_concept" href="http://mathworld.wolfram.com/Element.html">element</a> <math id="p1.m5" class="ltx_Math" alttext="v\in V" display="inline"><mrow><mi>v</mi><mo>∈</mo><mi>V</mi></mrow></math> can be written as an <a class="nnexus_concept" href="http://mathworld.wolfram.com/InfiniteSeries.html">infinite series</a></p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -27,10 +27,10 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">in exactly one way (where <math id="p1.m6" class="ltx_Math" alttext="a_{x}\in F" display="inline"><mrow><msub><mi>a</mi><mi>x</mi></msub><mo>∈</mo><mi>F</mi></mrow></math>). We are implicitly assuming, without further comment, that the vector space <math id="p1.m7" class="ltx_Math" alttext="V" display="inline"><mi>V</mi></math> has been given a topological structure or normed structure in which the above infinite sum is absolutely convergent (so that it converges to <math id="p1.m8" class="ltx_Math" alttext="v" display="inline"><mi>v</mi></math> regardless of the order in which the terms are summed).</p>
+<p class="ltx_p">in exactly one way (where <math id="p1.m6" class="ltx_Math" alttext="a_{x}\in F" display="inline"><mrow><msub><mi>a</mi><mi>x</mi></msub><mo>∈</mo><mi>F</mi></mrow></math>). We are implicitly assuming, without further comment, that the vector space <math id="p1.m7" class="ltx_Math" alttext="V" display="inline"><mi>V</mi></math> has been given a topological structure or normed <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">structure</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Structure.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/structure"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> in which the above infinite sum is <a class="nnexus_concept" href="http://planetmath.org/convergentseries">absolutely convergent</a> (so that it <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">converges</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/unlimitedregistermachine"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/convergentsequence"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> to <math id="p1.m8" class="ltx_Math" alttext="v" display="inline"><mi>v</mi></math> regardless of the order in which the terms are summed).</p>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">The archetypical example of a countable basis is the Fourier series of a function: every continuous real-valued periodic function <math id="p2.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> on the unit circle <math id="p2.m2" class="ltx_Math" alttext="S^{1}=\mathbb{R}/2\pi" display="inline"><mrow><msup><mi>S</mi><mn>1</mn></msup><mo>=</mo><mrow><mrow><mi>ℝ</mi><mo>/</mo><mn>2</mn></mrow><mo>⁢</mo><mi>π</mi></mrow></mrow></math> can be written as a Fourier series</p>
+<p class="ltx_p">The archetypical example of a countable basis is the Fourier series of a <a class="nnexus_concept" href="http://planetmath.org/function">function</a>: every <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">continuous</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Continuous.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/classesofordinalsandenumeratingfunctions"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/continuous"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> real-valued periodic function <math id="p2.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> on the unit circle <math id="p2.m2" class="ltx_Math" alttext="S^{1}=\mathbb{R}/2\pi" display="inline"><mrow><msup><mi>S</mi><mn>1</mn></msup><mo>=</mo><mrow><mrow><mi>ℝ</mi><mo>/</mo><mn>2</mn></mrow><mo>⁢</mo><mi>π</mi></mrow></mrow></math> can be written as a Fourier series</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -42,7 +42,7 @@
 <p class="ltx_p">in exactly one way.</p>
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p">Note: A countable basis is a countable set, but it is not usually a basis.
+<p class="ltx_p">Note: A countable basis is a <a class="nnexus_concept" href="http://mathworld.wolfram.com/CountableSet.html">countable set</a>, but it is not usually a basis.
 </p>
 <table class="ltx_tabular ltx_align_right ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
@@ -51,7 +51,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">countable basis</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">CountableBasis</td>
 </tr>
 <tr class="ltx_tr">
@@ -80,7 +80,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
