--- a/html/42-00-DiscreteSineTransform.html
+++ b/html/42-00-DiscreteSineTransform.html
@@ -18,14 +18,14 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">The  are a family of  transforms closely related to the discrete cosine transform and the discrete Fourier transform. The  set of variants of the DST was first introduced by Wang and Hunt <cite class="ltx_cite ltx_citemacro_cite">[<a href="#bib.bib3" title="" class="ltx_ref">3</a>]</cite>.</p>
+<p class="ltx_p">The  are a family of  transforms closely related to the <a class="nnexus_concept" href="http://planetmath.org/discretecosinetransform">discrete cosine transform</a> and the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">discrete Fourier transform</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/DiscreteFourierTransform.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/discretefouriertransform"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>. The  set of variants of the DST was first introduced by Wang and Hunt <cite class="ltx_cite ltx_citemacro_cite">[<a href="#bib.bib3" title="" class="ltx_ref">3</a>]</cite>.</p>
 </div>
 <section id="S1" class="ltx_section">
 <h2 class="ltx_title ltx_title_section">
 <span class="ltx_tag ltx_tag_section">1 </span>Definition</h2>
 
 <div id="S1.p1" class="ltx_para">
-<p class="ltx_p">The orthonormal variants of the DST, where <math id="S1.p1.m1" class="ltx_Math" alttext="x_{n}" display="inline"><msub><mi>x</mi><mi>n</mi></msub></math> is the original vector of <math id="S1.p1.m2" class="ltx_Math" alttext="N" display="inline"><mi>N</mi></math> real numbers, <math id="S1.p1.m3" class="ltx_Math" alttext="C_{k}" display="inline"><msub><mi>C</mi><mi>k</mi></msub></math> is the transformed vector of <math id="S1.p1.m4" class="ltx_Math" alttext="N" display="inline"><mi>N</mi></math> real numbers and <math id="S1.p1.m5" class="ltx_Math" alttext="\delta" display="inline"><mi>δ</mi></math> is the Kronecker delta, are defined by the following equations:</p>
+<p class="ltx_p">The <a class="nnexus_concept" href="http://planetmath.org/orthonormalset">orthonormal</a> variants of the DST, where <math id="S1.p1.m1" class="ltx_Math" alttext="x_{n}" display="inline"><msub><mi>x</mi><mi>n</mi></msub></math> is the original vector of <math id="S1.p1.m2" class="ltx_Math" alttext="N" display="inline"><mi>N</mi></math> real numbers, <math id="S1.p1.m3" class="ltx_Math" alttext="C_{k}" display="inline"><msub><mi>C</mi><mi>k</mi></msub></math> is the transformed vector of <math id="S1.p1.m4" class="ltx_Math" alttext="N" display="inline"><mi>N</mi></math> real numbers and <math id="S1.p1.m5" class="ltx_Math" alttext="\delta" display="inline"><mi>δ</mi></math> is the Kronecker delta, are defined by the following equations:</p>
 </div>
 <section id="S1.SS1" class="ltx_subsection">
 <h3 class="ltx_title ltx_title_subsection">
@@ -76,7 +76,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">The inverse of DST-II is DST-III.
+<p class="ltx_p">The inverse of DST-II is <a class="nnexus_concept" href="http://planetmath.org/discretesinetransform">DST-III</a>.
 </p>
 </div>
 </section>
@@ -281,7 +281,7 @@
 <li id="bib.bib1" class="ltx_bibitem">
         <span class="ltx_bibtag ltx_role_refnum">1</span>
         
-<span class="ltx_bibblock"> Xuancheng Shao, Steven G. Johnson. Type-II/III DCT/DST algorithms with reduced number of arithmetic operations. 2007.
+<span class="ltx_bibblock"> Xuancheng Shao, Steven G. Johnson. Type-II/III DCT/DST <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">algorithms</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Algorithm.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/algorithm"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> with <a class="nnexus_concept" href="http://planetmath.org/reducedautomaton">reduced</a> number of arithmetic operations. 2007.
 
 </span>
       </li>
@@ -298,7 +298,7 @@ sine transforms and their fast algorithms. 2006.
 <li id="bib.bib3" class="ltx_bibitem">
         <span class="ltx_bibtag ltx_role_refnum">3</span>
         
-<span class="ltx_bibblock"> Z. Wang and B. Hunt, The Discrete W Transform, Applied Mathematics and Computation,
+<span class="ltx_bibblock"> Z. Wang and B. Hunt, The Discrete W Transform, Applied Mathematics and <a class="nnexus_concept" href="http://mathworld.wolfram.com/Computation.html">Computation</a>,
 16. 1985.
 
 </span>
