--- a/html/42-01-ExistenceOfLaplaceTransform.html
+++ b/html/42-01-ExistenceOfLaplaceTransform.html
@@ -23,7 +23,7 @@
 <h6 class="ltx_title ltx_runin ltx_font_bold ltx_title_theorem">
 <span class="ltx_tag ltx_tag_theorem">Theorem 1</span>.</h6>
 <div id="Thmtheorem1.p1" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_italic">For every measurable function <math id="Thmtheorem1.p1.m1" class="ltx_Math" alttext="f\colon[0,\infty)\to\mathbb{C}" display="inline"><mrow><mi>f</mi><mo mathvariant="normal">:</mo><mrow><mrow><mo mathvariant="normal" stretchy="false">[</mo><mn mathvariant="normal">0</mn><mo mathvariant="normal">,</mo><mi mathvariant="normal">∞</mi><mo mathvariant="normal" stretchy="false">)</mo></mrow><mo mathvariant="normal">→</mo><mi mathvariant="normal">C</mi></mrow></mrow></math>, if there exists a real number <math id="Thmtheorem1.p1.m2" class="ltx_Math" alttext="t_{0}" display="inline"><msub><mi>t</mi><mn mathvariant="normal">0</mn></msub></math> such that</span></p>
+<p class="ltx_p"><span class="ltx_text ltx_font_italic">For every <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">measurable function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/MeasurableFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/measurablefunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="Thmtheorem1.p1.m1" class="ltx_Math" alttext="f\colon[0,\infty)\to\mathbb{C}" display="inline"><mrow><mi>f</mi><mo mathvariant="normal">:</mo><mrow><mrow><mo mathvariant="normal" stretchy="false">[</mo><mn mathvariant="normal">0</mn><mo mathvariant="normal">,</mo><mi mathvariant="normal">∞</mi><mo mathvariant="normal" stretchy="false">)</mo></mrow><mo mathvariant="normal">→</mo><mi mathvariant="normal">C</mi></mrow></mrow></math>, if there exists a <a class="nnexus_concept" href="http://planetmath.org/realnumber">real number</a> <math id="Thmtheorem1.p1.m2" class="ltx_Math" alttext="t_{0}" display="inline"><msub><mi>t</mi><mn mathvariant="normal">0</mn></msub></math> such that</span></p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -32,9 +32,9 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p"><span class="ltx_text ltx_font_italic">converges, then the Laplace transform <math id="Thmtheorem1.p1.m3" class="ltx_Math" alttext="\mathcal{L}(f)" display="inline"><mrow><mi class="ltx_font_mathcaligraphic" mathvariant="normal">L</mi><mo mathvariant="italic">⁢</mo><mrow><mo mathvariant="normal" stretchy="false">(</mo><mi>f</mi><mo mathvariant="normal" stretchy="false">)</mo></mrow></mrow></math> is
-a well-defined function from <math id="Thmtheorem1.p1.m4" class="ltx_Math" alttext="\{t\in\mathbb{C}\mid\Re t&gt;t_{0}\}" display="inline"><mrow><mo mathvariant="normal" stretchy="false">{</mo><mrow><mi>t</mi><mo mathvariant="normal">∈</mo><mrow><mi mathvariant="normal">C</mi><mo mathvariant="italic">⁢</mo><mrow><mo fence="true" mathvariant="normal">∣</mo><mrow><mi mathvariant="normal">ℜ</mi><mo mathvariant="italic">⁡</mo><mi>t</mi></mrow><mo mathvariant="normal">&gt;</mo></mrow><mo mathvariant="italic">⁢</mo><msub><mi>t</mi><mn mathvariant="normal">0</mn></msub></mrow></mrow><mo mathvariant="normal" stretchy="false">}</mo></mrow></math> to
-<math id="Thmtheorem1.p1.m5" class="ltx_Math" alttext="\mathbb{C}" display="inline"><mi mathvariant="normal">C</mi></math>. Furthermore, the Laplace transform function is analytic.</span></p>
+<p class="ltx_p"><span class="ltx_text ltx_font_italic">converges, then the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Laplace transform</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/LaplaceTransform.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/laplacetransform"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="Thmtheorem1.p1.m3" class="ltx_Math" alttext="\mathcal{L}(f)" display="inline"><mrow><mi class="ltx_font_mathcaligraphic" mathvariant="normal">L</mi><mo mathvariant="italic">⁢</mo><mrow><mo mathvariant="normal" stretchy="false">(</mo><mi>f</mi><mo mathvariant="normal" stretchy="false">)</mo></mrow></mrow></math> is
+a <a class="nnexus_concept" href="http://planetmath.org/welldefined">well-defined</a> <a class="nnexus_concept" href="http://planetmath.org/function">function</a> from <math id="Thmtheorem1.p1.m4" class="ltx_Math" alttext="\{t\in\mathbb{C}\mid\Re t&gt;t_{0}\}" display="inline"><mrow><mo mathvariant="normal" stretchy="false">{</mo><mrow><mi>t</mi><mo mathvariant="normal">∈</mo><mrow><mi mathvariant="normal">C</mi><mo mathvariant="italic">⁢</mo><mrow><mo fence="true" mathvariant="normal">∣</mo><mrow><mi mathvariant="normal">ℜ</mi><mo mathvariant="italic">⁡</mo><mi>t</mi></mrow><mo mathvariant="normal">&gt;</mo></mrow><mo mathvariant="italic">⁢</mo><msub><mi>t</mi><mn mathvariant="normal">0</mn></msub></mrow></mrow><mo mathvariant="normal" stretchy="false">}</mo></mrow></math> to
+<math id="Thmtheorem1.p1.m5" class="ltx_Math" alttext="\mathbb{C}" display="inline"><mi mathvariant="normal">C</mi></math>. Furthermore, the Laplace transform function is <a class="nnexus_concept" href="http://planetmath.org/analytic">analytic</a>.</span></p>
 </div>
 </div>
 <div id="p2" class="ltx_para ltx_align_right">
@@ -42,10 +42,10 @@ a well-defined function from <math id="Thmtheorem1.p1.m4" class="ltx_Math" altte
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">existence of Laplace transform</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/existenceoflaplacetransform">existence of Laplace transform</a></td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">ExistenceOfLaplaceTransform</td>
 </tr>
 <tr class="ltx_tr">
@@ -74,7 +74,7 @@ a well-defined function from <math id="Thmtheorem1.p1.m4" class="ltx_Math" altte
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Theorem</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/lemma">Theorem</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Classification</th>
