--- a/html/42A16-ExampleOfFourierSeries.html
+++ b/html/42A16-ExampleOfFourierSeries.html
@@ -18,13 +18,13 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">Here we present an example of Fourier series:</p>
+<p class="ltx_p">Here we present an example of <a class="nnexus_concept" href="http://planetmath.org/fouriercoefficients">Fourier series</a>:</p>
 </div>
 <div id="p2" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">Example:</span></p>
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p">Let <math id="p3.m1" class="ltx_Math" alttext="f\colon(-\pi,\pi)\to\mathbb{R}" display="inline"><mrow><mi>f</mi><mo>:</mo><mrow><mrow><mo stretchy="false">(</mo><mrow><mo>-</mo><mi>π</mi></mrow><mo>,</mo><mi>π</mi><mo stretchy="false">)</mo></mrow><mo>→</mo><mi>ℝ</mi></mrow></mrow></math> be the “identity” function,
+<p class="ltx_p">Let <math id="p3.m1" class="ltx_Math" alttext="f\colon(-\pi,\pi)\to\mathbb{R}" display="inline"><mrow><mi>f</mi><mo>:</mo><mrow><mrow><mo stretchy="false">(</mo><mrow><mo>-</mo><mi>π</mi></mrow><mo>,</mo><mi>π</mi><mo stretchy="false">)</mo></mrow><mo>→</mo><mi>ℝ</mi></mrow></mrow></math> be the “identity” <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Function.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/function"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>,
 defined by</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
@@ -35,8 +35,8 @@ defined by</p>
 </tr>
 </table>
 <p class="ltx_p">We will compute the Fourier coefficients for this function. Notice
-that <math id="p3.m2" class="ltx_Math" alttext="\cos(nx)" display="inline"><mrow><mi>cos</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mrow><mi>n</mi><mo>⁢</mo><mi>x</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></math> is an even function, while <math id="p3.m3" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> and <math id="p3.m4" class="ltx_Math" alttext="\sin(nx)" display="inline"><mrow><mi>sin</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mrow><mi>n</mi><mo>⁢</mo><mi>x</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></math> are
-odd functions.</p>
+that <math id="p3.m2" class="ltx_Math" alttext="\cos(nx)" display="inline"><mrow><mi>cos</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mrow><mi>n</mi><mo>⁢</mo><mi>x</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></math> is an <a class="nnexus_concept" href="http://mathworld.wolfram.com/EvenFunction.html">even function</a>, while <math id="p3.m3" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> and <math id="p3.m4" class="ltx_Math" alttext="\sin(nx)" display="inline"><mrow><mi>sin</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mrow><mi>n</mi><mo>⁢</mo><mi>x</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></math> are
+<a class="nnexus_concept" href="http://mathworld.wolfram.com/OddFunction.html">odd functions</a>.</p>
 <table id="S0.EGx1" class="ltx_equationgroup ltx_eqn_eqnarray ltx_eqn_table">
 
 <tr id="S0.Ex2" class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -101,7 +101,7 @@ odd functions. Hence the Fourier series for <math id="p4.m5" class="ltx_Math" al
 </div>
 <div id="p6" class="ltx_para">
 <p class="ltx_p">For an application of this Fourier series, see value of the
-Riemann zeta function at <math id="p6.m1" class="ltx_Math" alttext="s=2" display="inline"><mrow><mi>s</mi><mo>=</mo><mn>2</mn></mrow></math>.
+<a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Riemann zeta function</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/25.1"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://dlmf.nist.gov/25.2#E1"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/RiemannZetaFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/riemannzetafunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> at <math id="p6.m1" class="ltx_Math" alttext="s=2" display="inline"><mrow><mi>s</mi><mo>=</mo><mn>2</mn></mrow></math>.
 </p>
 <table class="ltx_tabular ltx_align_right ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
@@ -142,7 +142,7 @@ Riemann zeta function at <math id="p6.m1" class="ltx_Math" alttext="s=2" display
 <td class="ltx_td ltx_align_left ltx_border_r">Example</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_r">msc 42A16</td>
 </tr>
 <tr class="ltx_tr">
