--- a/html/42A16-GeneralizedRiemannLebesgueLemma.html
+++ b/html/42A16-GeneralizedRiemannLebesgueLemma.html
@@ -24,8 +24,8 @@
 <h6 class="ltx_title ltx_runin ltx_font_bold ltx_title_theorem">
 <span class="ltx_tag ltx_tag_theorem">Lemma 1</span>.</h6>
 <div id="Thmlem1.p1" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_italic">Let <math id="Thmlem1.p1.m1" class="ltx_Math" alttext="h\colon\mathbb{R}\to\mathbb{C}" display="inline"><mrow><mi>h</mi><mo mathvariant="normal">:</mo><mrow><mi mathvariant="normal">R</mi><mo mathvariant="normal">→</mo><mi mathvariant="normal">C</mi></mrow></mrow></math> be a bounded measurable function.
-If <math id="Thmlem1.p1.m2" class="ltx_Math" alttext="h" display="inline"><mi>h</mi></math> satisfies the <em class="ltx_emph ltx_font_upright">averaging condition</em></span></p>
+<p class="ltx_p"><span class="ltx_text ltx_font_italic">Let <math id="Thmlem1.p1.m1" class="ltx_Math" alttext="h\colon\mathbb{R}\to\mathbb{C}" display="inline"><mrow><mi>h</mi><mo mathvariant="normal">:</mo><mrow><mi mathvariant="normal">R</mi><mo mathvariant="normal">→</mo><mi mathvariant="normal">C</mi></mrow></mrow></math> be a bounded <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">measurable function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/MeasurableFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/measurablefunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>.
+If <math id="Thmlem1.p1.m2" class="ltx_Math" alttext="h" display="inline"><mi>h</mi></math> <a class="nnexus_concept" href="http://planetmath.org/satisfactionrelation">satisfies</a> the <em class="ltx_emph ltx_font_upright">averaging condition</em></span></p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -53,8 +53,8 @@ If <math id="Thmlem1.p1.m2" class="ltx_Math" alttext="h" display="inline"><mi>h<
 real and <math id="p2.m3" class="ltx_Math" alttext="0=a&lt;b&lt;\infty" display="inline"><mrow><mn>0</mn><mo>=</mo><mi>a</mi><mo>&lt;</mo><mi>b</mi><mo>&lt;</mo><mi mathvariant="normal">∞</mi></mrow></math>.</p>
 </div>
 <div id="p3" class="ltx_para ltx_noindent">
-<p class="ltx_p">Let <math id="p3.m1" class="ltx_Math" alttext="\mathbf{1}_{[a,b]}" display="inline"><msub><mn>𝟏</mn><mrow><mo stretchy="false">[</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow></msub></math> be the indicator function of the
-interval <math id="p3.m2" class="ltx_Math" alttext="[a,b]" display="inline"><mrow><mo stretchy="false">[</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow></math>. Then</p>
+<p class="ltx_p">Let <math id="p3.m1" class="ltx_Math" alttext="\mathbf{1}_{[a,b]}" display="inline"><msub><mn>𝟏</mn><mrow><mo stretchy="false">[</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow></msub></math> be the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">indicator function</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/booleanvaluedfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/characteristicfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of the
+<a class="nnexus_concept" href="http://planetmath.org/interval">interval</a> <math id="p3.m2" class="ltx_Math" alttext="[a,b]" display="inline"><mrow><mo stretchy="false">[</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow></math>. Then</p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -64,8 +64,8 @@ interval <math id="p3.m2" class="ltx_Math" alttext="[a,b]" display="inline"><mro
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">by the hypothesis. Hence, the lemma is valid for indicators,
-therefore for step functions.</p>
+<p class="ltx_p">by the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">hypothesis</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Hypothesis.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/deduction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>. Hence, the lemma is valid for indicators,
+therefore for <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">step functions</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/signumfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/simplefunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>.</p>
 </div>
 <div id="p4" class="ltx_para ltx_noindent">
 <p class="ltx_p">Now let <math id="p4.m1" class="ltx_Math" alttext="C" display="inline"><mi>C</mi></math> be a bound for <math id="p4.m2" class="ltx_Math" alttext="h" display="inline"><mi>h</mi></math> and choose <math id="p4.m3" class="ltx_Math" alttext="\epsilon" display="inline"><mi>ϵ</mi></math> <math id="p4.m4" class="ltx_Math" alttext="&gt;0" display="inline"><mrow><mi></mi><mo>&gt;</mo><mn>0</mn></mrow></math>.
@@ -106,7 +106,7 @@ functions. Since <math id="p6.m2" class="ltx_Math" alttext="\epsilon" display="i
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">generalized Riemann-Lebesgue lemma</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/generalizedriemannlebesguelemma">generalized Riemann-Lebesgue lemma</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
@@ -138,7 +138,7 @@ functions. Since <math id="p6.m2" class="ltx_Math" alttext="\epsilon" display="i
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Theorem</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Theorem.html">Theorem</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
