--- a/html/42A16-PoissonSummationFormula.html
+++ b/html/42A16-PoissonSummationFormula.html
@@ -27,7 +27,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">be its Fourier transform. The Poisson summation formula is the assertion that</p>
+<p class="ltx_p">be its <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Fourier transform</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/1.14#E1"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/FourierTransform.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/fouriertransform"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>. The <a class="nnexus_concept" href="http://planetmath.org/poissonsummationformula">Poisson summation formula</a> is the assertion that</p>
 <table id="S0.E1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -38,11 +38,11 @@
 </tr>
 </table>
 <p class="ltx_p">whenever <math id="p1.m2" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is such that both of the above infinite sums are
-absolutely convergent.</p>
+<a class="nnexus_concept" href="http://planetmath.org/convergentseries">absolutely convergent</a>.</p>
 </div>
 <div id="p2" class="ltx_para">
 <p class="ltx_p">Equation (<a href="#S0.E1" title="(1) ‣ Poisson summation formula" class="ltx_ref"><span class="ltx_text ltx_ref_tag">1</span></a>) is useful because it establishes a
-correspondence between Fourier series and Fourier integrals. To see
+correspondence between <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Fourier series</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/FourierSeries.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/fouriercoefficients"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> and <a class="nnexus_concept" href="http://planetmath.org/fourierseriesincomplexformandfourierintegral">Fourier integrals</a>. To see
 the connection, let</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
@@ -52,8 +52,8 @@ the connection, let</p>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">be the periodic
-function obtained by pseudo-averaging<span class="ltx_note ltx_role_footnote"><sup class="ltx_note_mark">1</sup><span class="ltx_note_outer"><span class="ltx_note_content"><sup class="ltx_note_mark">1</sup>This terminology is at best a metaphor. The operation in question is not a genuine mean, in the technical sense of that word.</span></span></span> <math id="p2.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> relative to <math id="p2.m2" class="ltx_Math" alttext="\mathbb{Z}" display="inline"><mi>ℤ</mi></math> acting
+<p class="ltx_p">be the <a class="nnexus_concept" href="http://mathworld.wolfram.com/PeriodicFunction.html">periodic
+function</a> obtained by pseudo-averaging<span class="ltx_note ltx_role_footnote"><sup class="ltx_note_mark">1</sup><span class="ltx_note_outer"><span class="ltx_note_content"><sup class="ltx_note_mark">1</sup>This terminology is at best a metaphor. The operation in question is not a genuine mean, in the technical sense of that word.</span></span></span> <math id="p2.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> relative to <math id="p2.m2" class="ltx_Math" alttext="\mathbb{Z}" display="inline"><mi>ℤ</mi></math> acting
 as the discrete group of translations on <math id="p2.m3" class="ltx_Math" alttext="\mathbb{R}" display="inline"><mi>ℝ</mi></math>. Since <math id="p2.m4" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> was
 assumed to be integrable, <math id="p2.m5" class="ltx_Math" alttext="g" display="inline"><mi>g</mi></math> is defined almost everywhere, and is
 integrable over <math id="p2.m6" class="ltx_Math" alttext="[0,1]" display="inline"><mrow><mo stretchy="false">[</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy="false">]</mo></mrow></math> with</p>
@@ -65,7 +65,7 @@ integrable over <math id="p2.m6" class="ltx_Math" alttext="[0,1]" display="inlin
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">Since <math id="p2.m7" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is integrable, we may interchange integration and summation
+<p class="ltx_p">Since <math id="p2.m7" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is integrable, we may interchange integration and <a class="nnexus_concept" href="http://planetmath.org/summation">summation</a>
 to obtain</p>
 <table id="S0.Ex4" class="ltx_equation ltx_eqn_table">
 
@@ -77,7 +77,7 @@ e^{-2\pi ikx}g(x)dx" display="block"><mrow><mrow><mover accent="true"><mi>f</mi>
 </tr>
 </table>
 <p class="ltx_p">for every <math id="p2.m8" class="ltx_Math" alttext="k\in\mathbb{Z}" display="inline"><mrow><mi>k</mi><mo>∈</mo><mi>ℤ</mi></mrow></math>. In other words, the restriction of the Fourier
-transform of <math id="p2.m9" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> to the integers gives the Fourier coefficients of the
+transform of <math id="p2.m9" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> to the <a class="nnexus_concept" href="http://mathworld.wolfram.com/Integer.html">integers</a> gives the Fourier coefficients of the
 averaged, periodic function <math id="p2.m10" class="ltx_Math" alttext="g" display="inline"><mi>g</mi></math>. Since we have assumed that the
 <math id="p2.m11" class="ltx_Math" alttext="\hat{f}(k)" display="inline"><mrow><mover accent="true"><mi>f</mi><mo stretchy="false">^</mo></mover><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>k</mi><mo stretchy="false">)</mo></mrow></mrow></math> form an absolutely convergent series, we have that</p>
 <table id="S0.Ex5" class="ltx_equation ltx_eqn_table">
@@ -89,7 +89,7 @@ averaged, periodic function <math id="p2.m10" class="ltx_Math" alttext="g" displ
 </tr>
 </table>
 <p class="ltx_p">in the sense of
-uniform convergence. Evaluating the above equation at <math id="p2.m12" class="ltx_Math" alttext="x=0" display="inline"><mrow><mi>x</mi><mo>=</mo><mn>0</mn></mrow></math>, we
+<a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">uniform convergence</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/UniformConvergence.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/uniformconvergence"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>. Evaluating the above equation at <math id="p2.m12" class="ltx_Math" alttext="x=0" display="inline"><mrow><mi>x</mi><mo>=</mo><mn>0</mn></mrow></math>, we
 obtain the Poisson summation formula (<a href="#S0.E1" title="(1) ‣ Poisson summation formula" class="ltx_ref"><span class="ltx_text ltx_ref_tag">1</span></a>).
 </p>
 <table class="ltx_tabular ltx_align_right ltx_guessed_headers ltx_align_middle">
