--- a/html/42A16-RiemannLebesgueLemma.html
+++ b/html/42A16-RiemannLebesgueLemma.html
@@ -19,8 +19,8 @@
 <div id="p1" class="ltx_para ltx_noindent">
 <br class="ltx_break">
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">.</span>
-Let <math id="p1.m1" class="ltx_Math" alttext="f:[a,b]\rightarrow\mathbb{C}" display="inline"><mrow><mi>f</mi><mo>:</mo><mrow><mrow><mo stretchy="false">[</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow><mo>→</mo><mi>ℂ</mi></mrow></mrow></math> be a measurable function. If <math id="p1.m2" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is
-<math id="p1.m3" class="ltx_Math" alttext="L^{1}" display="inline"><msup><mi>L</mi><mn>1</mn></msup></math> integrable, that is to say if the Lebesgue integral of <math id="p1.m4" class="ltx_Math" alttext="|f|" display="inline"><mrow><mo stretchy="false">|</mo><mi>f</mi><mo stretchy="false">|</mo></mrow></math> is
+Let <math id="p1.m1" class="ltx_Math" alttext="f:[a,b]\rightarrow\mathbb{C}" display="inline"><mrow><mi>f</mi><mo>:</mo><mrow><mrow><mo stretchy="false">[</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow><mo>→</mo><mi>ℂ</mi></mrow></mrow></math> be a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">measurable function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/MeasurableFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/measurablefunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>. If <math id="p1.m2" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is
+<math id="p1.m3" class="ltx_Math" alttext="L^{1}" display="inline"><msup><mi>L</mi><mn>1</mn></msup></math> <a class="nnexus_concept" href="http://planetmath.org/vectorvaluedfunction">integrable</a>, that is to say if the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Lebesgue integral</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/LebesgueIntegral.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/lebesgueintegral"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <math id="p1.m4" class="ltx_Math" alttext="|f|" display="inline"><mrow><mo stretchy="false">|</mo><mi>f</mi><mo stretchy="false">|</mo></mrow></math> is
 finite, then</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
@@ -32,9 +32,9 @@ finite, then</p>
 </table>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">The above result, commonly known as the Riemann-Lebesgue lemma, is of
-basic importance in harmonic analysis. It is equivalent to the
-assertion that the Fourier coefficients <math id="p2.m1" class="ltx_Math" alttext="\hat{f}_{n}" display="inline"><msub><mover accent="true"><mi>f</mi><mo stretchy="false">^</mo></mover><mi>n</mi></msub></math> of a periodic, integrable
+<p class="ltx_p">The above result, commonly known as the <a class="nnexus_concept" href="http://planetmath.org/riemannlebesguelemma">Riemann-Lebesgue lemma</a>, is of
+basic importance in <a class="nnexus_concept" href="http://mathworld.wolfram.com/HarmonicAnalysis.html">harmonic analysis</a>. It is <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">equivalent</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Equivalent.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/filterbasis"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/equivalenceofforcingnotions"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/equivalentmachines"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/equivalencerelation"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> to the
+assertion that the <a class="nnexus_concept" href="http://planetmath.org/fouriercoefficients">Fourier coefficients</a> <math id="p2.m1" class="ltx_Math" alttext="\hat{f}_{n}" display="inline"><msub><mover accent="true"><mi>f</mi><mo stretchy="false">^</mo></mover><mi>n</mi></msub></math> of a <a class="nnexus_concept" href="http://planetmath.org/quasiperiodicfunction">periodic</a>, integrable
 function <math id="p2.m2" class="ltx_Math" alttext="f(x)" display="inline"><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math>, tend to <math id="p2.m3" class="ltx_Math" alttext="0" display="inline"><mn>0</mn></math> as <math id="p2.m4" class="ltx_Math" alttext="n\rightarrow\pm\infty" display="inline"><mrow><mi>n</mi><mo>→</mo><mrow><mo>±</mo><mi mathvariant="normal">∞</mi></mrow></mrow></math>.</p>
 </div>
 <div id="p3" class="ltx_para">
@@ -42,7 +42,7 @@ function <math id="p2.m2" class="ltx_Math" alttext="f(x)" display="inline"><mrow
 </p>
 </div>
 <div id="p4" class="ltx_para ltx_noindent">
-<p class="ltx_p"><em class="ltx_emph ltx_font_italic">Step 1.</em> An elementary calculation shows that</p>
+<p class="ltx_p"><em class="ltx_emph ltx_font_italic">Step 1.</em> An <a class="nnexus_concept" href="http://planetmath.org/elementaryrecursivefunction">elementary</a> calculation shows that</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -51,13 +51,13 @@ function <math id="p2.m2" class="ltx_Math" alttext="f(x)" display="inline"><mrow
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">for every interval <math id="p4.m1" class="ltx_Math" alttext="I\subset[a,b]" display="inline"><mrow><mi>I</mi><mo>⊂</mo><mrow><mo stretchy="false">[</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow></mrow></math>. The proposition is therefore true
-for all step functions with support (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/SupportOfFunction</span>) in <math id="p4.m2" class="ltx_Math" alttext="[a,b]" display="inline"><mrow><mo stretchy="false">[</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow></math>.</p>
+<p class="ltx_p">for every <a class="nnexus_concept" href="http://planetmath.org/interval">interval</a> <math id="p4.m1" class="ltx_Math" alttext="I\subset[a,b]" display="inline"><mrow><mi>I</mi><mo>⊂</mo><mrow><mo stretchy="false">[</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow></mrow></math>. The <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">proposition</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/booleanvaluedfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/propositionallogic"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> is therefore true
+for all <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">step functions</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/signumfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/simplefunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> with <a class="nnexus_concept" href="http://mathworld.wolfram.com/Support.html">support</a> (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/SupportOfFunction</span>) in <math id="p4.m2" class="ltx_Math" alttext="[a,b]" display="inline"><mrow><mo stretchy="false">[</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow></math>.</p>
 </div>
 <div id="p5" class="ltx_para ltx_noindent">
 <p class="ltx_p"><em class="ltx_emph ltx_font_italic">Step 2.</em>
-By the monotone convergence theorem, the proposition is true for all
-positive functions, integrable on <math id="p5.m1" class="ltx_Math" alttext="[a,b]" display="inline"><mrow><mo stretchy="false">[</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow></math>.</p>
+By the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">monotone convergence theorem</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/MonotoneConvergenceTheorem.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/monotoneconvergencetheorem"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, the proposition is true for all
+<a class="nnexus_concept" href="http://planetmath.org/positive">positive</a> <a class="nnexus_concept" href="http://planetmath.org/function">functions</a>, integrable on <math id="p5.m1" class="ltx_Math" alttext="[a,b]" display="inline"><mrow><mo stretchy="false">[</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy="false">]</mo></mrow></math>.</p>
 </div>
 <div id="p6" class="ltx_para">
 <p class="ltx_p"><em class="ltx_emph ltx_font_italic">Step 3.</em> Let <math id="p6.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> be an arbitrary measurable function,
@@ -110,7 +110,7 @@ integrable on <math id="p6.m2" class="ltx_Math" alttext="[a,b]" display="inline"
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Theorem</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Theorem.html">Theorem</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Classification</th>
