--- a/html/42A32-FourierSineAndCosineSeries.html
+++ b/html/42A32-FourierSineAndCosineSeries.html
@@ -34,7 +34,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">of the coefficients <math id="p1.m1" class="ltx_Math" alttext="a_{n}" display="inline"><msub><mi>a</mi><mi>n</mi></msub></math> and <math id="p1.m2" class="ltx_Math" alttext="b_{n}" display="inline"><msub><mi>b</mi><mi>n</mi></msub></math> for the Fourier series</p>
+<p class="ltx_p">of the <a class="nnexus_concept" href="http://planetmath.org/polynomial">coefficients</a> <math id="p1.m1" class="ltx_Math" alttext="a_{n}" display="inline"><msub><mi>a</mi><mi>n</mi></msub></math> and <math id="p1.m2" class="ltx_Math" alttext="b_{n}" display="inline"><msub><mi>b</mi><mi>n</mi></msub></math> for the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Fourier series</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/FourierSeries.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/fouriercoefficients"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -43,20 +43,20 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">of the Riemann integrable real function <math id="p1.m3" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> on the interval  <math id="p1.m4" class="ltx_Math" alttext="[-\pi,\,\pi]" display="inline"><mrow><mo stretchy="false">[</mo><mrow><mo>-</mo><mi>π</mi></mrow><mo rspace="4.2pt">,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow></math>,  that</p>
+<p class="ltx_p">of the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Riemann integrable</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/riemannintegral"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/riemannmultipleintegral"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <a class="nnexus_concept" href="http://mathworld.wolfram.com/RealFunction.html">real function</a> <math id="p1.m3" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> on the <a class="nnexus_concept" href="http://planetmath.org/interval">interval</a>  <math id="p1.m4" class="ltx_Math" alttext="[-\pi,\,\pi]" display="inline"><mrow><mo stretchy="false">[</mo><mrow><mo>-</mo><mi>π</mi></mrow><mo rspace="4.2pt">,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow></math>,  that</p>
 <ul id="I1" class="ltx_itemize">
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i1.p1" class="ltx_para">
 <p class="ltx_p"><math id="I1.i1.p1.m1" class="ltx_Math" alttext="\displaystyle a_{n}=\frac{2}{\pi}\int_{0}^{\pi}\!f(x)\cos{nx}\,dx" display="inline"><mrow><msub><mi>a</mi><mi>n</mi></msub><mo>=</mo><mrow><mstyle displaystyle="true"><mfrac><mn>2</mn><mi>π</mi></mfrac></mstyle><mo>⁢</mo><mrow><mpadded width="-1.7pt"><mstyle displaystyle="true"><msubsup><mo largeop="true" symmetric="true">∫</mo><mn>0</mn><mi>π</mi></msubsup></mstyle></mpadded><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mrow><mi>cos</mi><mo>⁡</mo><mrow><mi>n</mi><mo>⁢</mo><mpadded width="+1.7pt"><mi>x</mi></mpadded><mo>⁢</mo><mi>d</mi><mo>⁢</mo><mi>x</mi></mrow></mrow></mrow></mrow></mrow></mrow></math>,  
-<math id="I1.i1.p1.m2" class="ltx_Math" alttext="b_{n}=0" display="inline"><mrow><msub><mi>b</mi><mi>n</mi></msub><mo>=</mo><mn>0</mn></mrow></math>  <math id="I1.i1.p1.m3" class="ltx_Math" alttext="\forall n" display="inline"><mrow><mo>∀</mo><mi>n</mi></mrow></math>  if <math id="I1.i1.p1.m4" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is an even function;</p>
+<math id="I1.i1.p1.m2" class="ltx_Math" alttext="b_{n}=0" display="inline"><mrow><msub><mi>b</mi><mi>n</mi></msub><mo>=</mo><mn>0</mn></mrow></math>  <math id="I1.i1.p1.m3" class="ltx_Math" alttext="\forall n" display="inline"><mrow><mo>∀</mo><mi>n</mi></mrow></math>  if <math id="I1.i1.p1.m4" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is an <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">even function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/EvenFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/evenandoddfunctions"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>;</p>
 </div>
 </li>
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i2.p1" class="ltx_para">
 <p class="ltx_p"><math id="I1.i2.p1.m1" class="ltx_Math" alttext="\displaystyle b_{n}=\frac{2}{\pi}\int_{0}^{\pi}\!f(x)\sin{nx}\,dx" display="inline"><mrow><msub><mi>b</mi><mi>n</mi></msub><mo>=</mo><mrow><mstyle displaystyle="true"><mfrac><mn>2</mn><mi>π</mi></mfrac></mstyle><mo>⁢</mo><mrow><mpadded width="-1.7pt"><mstyle displaystyle="true"><msubsup><mo largeop="true" symmetric="true">∫</mo><mn>0</mn><mi>π</mi></msubsup></mstyle></mpadded><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mrow><mi>sin</mi><mo>⁡</mo><mrow><mi>n</mi><mo>⁢</mo><mpadded width="+1.7pt"><mi>x</mi></mpadded><mo>⁢</mo><mi>d</mi><mo>⁢</mo><mi>x</mi></mrow></mrow></mrow></mrow></mrow></mrow></math>,  
-<math id="I1.i2.p1.m2" class="ltx_Math" alttext="a_{n}=0" display="inline"><mrow><msub><mi>a</mi><mi>n</mi></msub><mo>=</mo><mn>0</mn></mrow></math>  <math id="I1.i2.p1.m3" class="ltx_Math" alttext="\forall n" display="inline"><mrow><mo>∀</mo><mi>n</mi></mrow></math>  if <math id="I1.i2.p1.m4" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is an odd function.</p>
+<math id="I1.i2.p1.m2" class="ltx_Math" alttext="a_{n}=0" display="inline"><mrow><msub><mi>a</mi><mi>n</mi></msub><mo>=</mo><mn>0</mn></mrow></math>  <math id="I1.i2.p1.m3" class="ltx_Math" alttext="\forall n" display="inline"><mrow><mo>∀</mo><mi>n</mi></mrow></math>  if <math id="I1.i2.p1.m4" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is an <a class="nnexus_concept" href="http://mathworld.wolfram.com/OddFunction.html">odd function</a>.</p>
 </div>
 </li>
 </ul>
@@ -74,7 +74,7 @@
 <br class="ltx_break">
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_bold">Remark 1</span>.  On the <span class="ltx_text ltx_font_italic">half-interval</span>  <math id="p2.m1" class="ltx_Math" alttext="[0,\,\pi]" display="inline"><mrow><mo stretchy="false">[</mo><mn>0</mn><mo rspace="4.2pt">,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow></math>  one can in any case expand each Riemann integrable function <math id="p2.m2" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> both to a cosine series and to a sine series, irrespective of how it is defined for the negative half-interval or is it defined here at all.
+<p class="ltx_p"><span class="ltx_text ltx_font_bold">Remark 1</span>.  On the <span class="ltx_text ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/fouriersineandcosineseries">half-interval</a></span>  <math id="p2.m1" class="ltx_Math" alttext="[0,\,\pi]" display="inline"><mrow><mo stretchy="false">[</mo><mn>0</mn><mo rspace="4.2pt">,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow></math>  one can in any case expand each Riemann integrable <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Function.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/function"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p2.m2" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> both to a cosine series and to a sine series, irrespective of how it is defined for the <a class="nnexus_concept" href="http://planetmath.org/positive">negative</a> half-interval or is it defined here at all.
 <br class="ltx_break"></p>
 </div>
 <div id="p3" class="ltx_para">
@@ -89,7 +89,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">have the expressions</p>
+<p class="ltx_p">have the <a class="nnexus_concept" href="http://planetmath.org/expression">expressions</a></p>
 <ul id="I2" class="ltx_itemize">
 <li id="I2.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
@@ -108,7 +108,7 @@
 </ul>
 </div>
 <div id="p4" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_bold">Example.</span>  Expand the identity function (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/IdentityMap</span>)  <math id="p4.m1" class="ltx_Math" alttext="x\mapsto x" display="inline"><mrow><mi>x</mi><mo>↦</mo><mi>x</mi></mrow></math>  to a Fourier cosine series on  <math id="p4.m2" class="ltx_Math" alttext="[0,\,\pi]" display="inline"><mrow><mo stretchy="false">[</mo><mn>0</mn><mo rspace="4.2pt">,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow></math>.</p>
+<p class="ltx_p"><span class="ltx_text ltx_font_bold">Example.</span>  Expand the <a class="nnexus_concept" href="http://mathworld.wolfram.com/IdentityFunction.html">identity function</a> (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/IdentityMap</span>)  <math id="p4.m1" class="ltx_Math" alttext="x\mapsto x" display="inline"><mrow><mi>x</mi><mo>↦</mo><mi>x</mi></mrow></math>  to a <a class="nnexus_concept" href="http://mathworld.wolfram.com/FourierCosineSeries.html">Fourier cosine series</a> on  <math id="p4.m2" class="ltx_Math" alttext="[0,\,\pi]" display="inline"><mrow><mo stretchy="false">[</mo><mn>0</mn><mo rspace="4.2pt">,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow></math>.</p>
 </div>
 <div id="p5" class="ltx_para">
 <p class="ltx_p">This odd function may be replaced with the even function  <math id="p5.m1" class="ltx_Math" alttext="f:x\mapsto|x|" display="inline"><mrow><mi>f</mi><mo>:</mo><mrow><mi>x</mi><mo>↦</mo><mrow><mo stretchy="false">|</mo><mi>x</mi><mo stretchy="false">|</mo></mrow></mrow></mrow></math>.  Then we get</p>
@@ -133,7 +133,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">this equals to <math id="p5.m2" class="ltx_Math" alttext="\displaystyle-\frac{4}{\pi n^{2}}" display="inline"><mrow><mo>-</mo><mstyle displaystyle="true"><mfrac><mn>4</mn><mrow><mi>π</mi><mo>⁢</mo><msup><mi>n</mi><mn>2</mn></msup></mrow></mfrac></mstyle></mrow></math> if <math id="p5.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is an odd integer, but vanishes for each even <math id="p5.m4" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>.  Thus we obtain on the interval  <math id="p5.m5" class="ltx_Math" alttext="[0,\,\pi]" display="inline"><mrow><mo stretchy="false">[</mo><mn>0</mn><mo rspace="4.2pt">,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow></math>  the cosine series</p>
+<p class="ltx_p">this equals to <math id="p5.m2" class="ltx_Math" alttext="\displaystyle-\frac{4}{\pi n^{2}}" display="inline"><mrow><mo>-</mo><mstyle displaystyle="true"><mfrac><mn>4</mn><mrow><mi>π</mi><mo>⁢</mo><msup><mi>n</mi><mn>2</mn></msup></mrow></mfrac></mstyle></mrow></math> if <math id="p5.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is an <a class="nnexus_concept" href="http://planetmath.org/evennumber">odd integer</a>, but <a class="nnexus_concept" href="http://planetmath.org/zeroofafunction">vanishes</a> for each even <math id="p5.m4" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>.  Thus we obtain on the interval  <math id="p5.m5" class="ltx_Math" alttext="[0,\,\pi]" display="inline"><mrow><mo stretchy="false">[</mo><mn>0</mn><mo rspace="4.2pt">,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow></math>  the cosine series</p>
 <table id="S0.Ex8" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -152,11 +152,11 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">(cf. the entry on <span class="ltx_text ltx_font_typewriter">http://planetmath.org/node/11010</span>Dirichlet eta function at 2).
+<p class="ltx_p">(cf. the entry on <span class="ltx_text ltx_font_typewriter">http://planetmath.org/node/11010</span><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Dirichlet eta function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/DirichletEtaFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/dirichletetafunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> at 2).
 <br class="ltx_break"></p>
 </div>
 <div id="p6" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_bold">Fourier double series.</span>  The Fourier sine and cosine series introduced in Remark 1 on the half-interval  <math id="p6.m1" class="ltx_Math" alttext="[0,\,\pi]" display="inline"><mrow><mo stretchy="false">[</mo><mn>0</mn><mo rspace="4.2pt">,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow></math>  for a function of one real variable may be generalized for e.g. functions of two real variables on a rectangle  <math id="p6.m2" class="ltx_Math" alttext="\{(x,\,y)\in\mathbb{R}^{2}\,\vdots\,\,0\leq x\leq a,\,0\leq y\leq b\}" display="inline"><mrow><mo stretchy="false">{</mo><mrow><mrow><mrow><mo stretchy="false">(</mo><mi>x</mi><mo rspace="4.2pt">,</mo><mi>y</mi><mo stretchy="false">)</mo></mrow><mo>∈</mo><mrow><mpadded width="+1.7pt"><msup><mi>ℝ</mi><mn>2</mn></msup></mpadded><mo>⁢</mo><mi mathvariant="normal">⋮</mi><mo>⁢</mo><mn>  0</mn></mrow><mo>≤</mo><mi>x</mi><mo>≤</mo><mi>a</mi></mrow><mo>,</mo><mrow><mn> 0</mn><mo>≤</mo><mi>y</mi><mo>≤</mo><mi>b</mi></mrow></mrow><mo stretchy="false">}</mo></mrow></math>:</p>
+<p class="ltx_p"><span class="ltx_text ltx_font_bold">Fourier <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">double series</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/DoubleSeries.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/doubleseries"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>.</span>  The Fourier sine and cosine series introduced in Remark 1 on the half-interval  <math id="p6.m1" class="ltx_Math" alttext="[0,\,\pi]" display="inline"><mrow><mo stretchy="false">[</mo><mn>0</mn><mo rspace="4.2pt">,</mo><mi>π</mi><mo stretchy="false">]</mo></mrow></math>  for a function of one real variable may be generalized for e.g. functions of two real variables on a rectangle  <math id="p6.m2" class="ltx_Math" alttext="\{(x,\,y)\in\mathbb{R}^{2}\,\vdots\,\,0\leq x\leq a,\,0\leq y\leq b\}" display="inline"><mrow><mo stretchy="false">{</mo><mrow><mrow><mrow><mo stretchy="false">(</mo><mi>x</mi><mo rspace="4.2pt">,</mo><mi>y</mi><mo stretchy="false">)</mo></mrow><mo>∈</mo><mrow><mpadded width="+1.7pt"><msup><mi>ℝ</mi><mn>2</mn></msup></mpadded><mo>⁢</mo><mi mathvariant="normal">⋮</mi><mo>⁢</mo><mn>  0</mn></mrow><mo>≤</mo><mi>x</mi><mo>≤</mo><mi>a</mi></mrow><mo>,</mo><mrow><mn> 0</mn><mo>≤</mo><mi>y</mi><mo>≤</mo><mi>b</mi></mrow></mrow><mo stretchy="false">}</mo></mrow></math>:</p>
 <table id="A0.EGx2" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S0.E1"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -178,7 +178,7 @@
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(2)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">The coefficients of the <span class="ltx_text ltx_font_italic">Fourier double sine series</span> (1) are got by the double integral</p>
+<p class="ltx_p">The coefficients of the <span class="ltx_text ltx_font_italic">Fourier double sine series</span> (1) are got by the <a class="nnexus_concept" href="http://planetmath.org/integraloverplaneregion">double integral</a></p>
 <table id="S0.Ex10" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -232,7 +232,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Fourier sine and cosine series</td>
 </tr>
 <tr class="ltx_tr">
-<td class="ltx_td ltx_align_left ltx_border_l">Canonical name</td>
+<td class="ltx_td ltx_align_left ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</td>
 <td class="ltx_td ltx_align_left ltx_border_r">FourierSineAndCosineSeries</td>
 </tr>
 <tr class="ltx_tr">
@@ -313,7 +313,7 @@
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l">Defines</td>
-<td class="ltx_td ltx_align_left ltx_border_r">Fourier sine series</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://mathworld.wolfram.com/FourierSineSeries.html">Fourier sine series</a></td>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l">Defines</td>
