--- a/html/42A38-FourierSeriesInComplexFormAndFourierIntegral.html
+++ b/html/42A38-FourierSeriesInComplexFormAndFourierIntegral.html
@@ -24,7 +24,7 @@
 <span class="ltx_tag ltx_tag_subsection">0.1 </span>Fourier series in complex form</h2>
 
 <div id="S0.SS1.p1" class="ltx_para">
-<p class="ltx_p">The Fourier series expansion of a Riemann integrable real function <math id="S0.SS1.p1.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> on the interval  <math id="S0.SS1.p1.m2" class="ltx_Math" alttext="[-p,\,p]" display="inline"><mrow><mo stretchy="false">[</mo><mrow><mo>-</mo><mi>p</mi></mrow><mo rspace="4.2pt">,</mo><mi>p</mi><mo stretchy="false">]</mo></mrow></math>  is</p>
+<p class="ltx_p">The <a class="nnexus_concept" href="http://mathworld.wolfram.com/FourierSeries.html">Fourier series</a> expansion of a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Riemann integrable</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/riemannintegral"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/riemannmultipleintegral"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <a class="nnexus_concept" href="http://mathworld.wolfram.com/RealFunction.html">real function</a> <math id="S0.SS1.p1.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> on the <a class="nnexus_concept" href="http://planetmath.org/interval">interval</a>  <math id="S0.SS1.p1.m2" class="ltx_Math" alttext="[-p,\,p]" display="inline"><mrow><mo stretchy="false">[</mo><mrow><mo>-</mo><mi>p</mi></mrow><mo rspace="4.2pt">,</mo><mi>p</mi><mo stretchy="false">]</mo></mrow></math>  is</p>
 <table id="A0.EGx1" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S0.E1"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -35,7 +35,7 @@
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(1)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">where the coefficients are</p>
+<p class="ltx_p">where the <a class="nnexus_concept" href="http://planetmath.org/polynomial">coefficients</a> are</p>
 <table id="A0.EGx2" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S0.E2"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -46,7 +46,7 @@
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(2)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">If one expresses the cosines and sines via Euler formulas (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/ComplexSineAndCosine</span>) with exponential function (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/ComplexExponentialFunction</span>), the series (1) attains the form</p>
+<p class="ltx_p">If one expresses the cosines and sines via Euler formulas (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/ComplexSineAndCosine</span>) with <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">exponential function</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/4.2#iii"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://dlmf.nist.gov/4.2#E19"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/ExponentialFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a></sup> (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/ComplexExponentialFunction</span>), the series (1) attains the form</p>
 <table id="A0.EGx3" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S0.E3"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -69,7 +69,7 @@
 </table>
 </div>
 <div id="S0.SS1.p2" class="ltx_para">
-<p class="ltx_p">We may say that in (3), <math id="S0.SS1.p2.m1" class="ltx_Math" alttext="f(t)" display="inline"><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow></math> has been dissolved to sum of <span class="ltx_text ltx_font_italic">harmonics</span> (elementary waves) <math id="S0.SS1.p2.m2" class="ltx_Math" alttext="c_{n}e^{\frac{in\pi t}{p}}" display="inline"><mrow><msub><mi>c</mi><mi>n</mi></msub><mo>⁢</mo><msup><mi>e</mi><mfrac><mrow><mi>i</mi><mo>⁢</mo><mi>n</mi><mo>⁢</mo><mi>π</mi><mo>⁢</mo><mi>t</mi></mrow><mi>p</mi></mfrac></msup></mrow></math> with amplitudes <math id="S0.SS1.p2.m3" class="ltx_Math" alttext="c_{n}" display="inline"><msub><mi>c</mi><mi>n</mi></msub></math> corresponding the frequencies <math id="S0.SS1.p2.m4" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>.</p>
+<p class="ltx_p">We may say that in (3), <math id="S0.SS1.p2.m1" class="ltx_Math" alttext="f(t)" display="inline"><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow></math> has been dissolved to sum of <span class="ltx_text ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/laplaceequation">harmonics</a></span> (<a class="nnexus_concept" href="http://planetmath.org/elementaryrecursivefunction">elementary</a> waves) <math id="S0.SS1.p2.m2" class="ltx_Math" alttext="c_{n}e^{\frac{in\pi t}{p}}" display="inline"><mrow><msub><mi>c</mi><mi>n</mi></msub><mo>⁢</mo><msup><mi>e</mi><mfrac><mrow><mi>i</mi><mo>⁢</mo><mi>n</mi><mo>⁢</mo><mi>π</mi><mo>⁢</mo><mi>t</mi></mrow><mi>p</mi></mfrac></msup></mrow></math> with amplitudes <math id="S0.SS1.p2.m3" class="ltx_Math" alttext="c_{n}" display="inline"><msub><mi>c</mi><mi>n</mi></msub></math> corresponding the frequencies <math id="S0.SS1.p2.m4" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>.</p>
 </div>
 </section>
 <section id="S0.SS2" class="ltx_subsection">
@@ -108,7 +108,7 @@ f(t)e^{\frac{-in\pi t}{p}}\,dt" display="block"><mrow><mrow><mi>f</mi><mo>⁢</m
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(5)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">Here, <math id="S0.SS2.p1.m7" class="ltx_Math" alttext="f(t)" display="inline"><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow></math> has been represented as a <span class="ltx_text ltx_font_italic">Fourier integral</span>.  It can be proved that for validity of the expansion (4) it suffices that the function <math id="S0.SS2.p1.m8" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is piecewise continuous on every finite interval having at most a finite amount of extremum points and that the integral</p>
+<p class="ltx_p">Here, <math id="S0.SS2.p1.m7" class="ltx_Math" alttext="f(t)" display="inline"><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow></math> has been represented as a <span class="ltx_text ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/fourierseriesincomplexformandfourierintegral">Fourier integral</a></span>.  It can be proved that for <a class="nnexus_concept" href="http://mathworld.wolfram.com/Validity.html">validity</a> of the expansion (4) it suffices that the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Function.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/function"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="S0.SS2.p1.m8" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> is <a class="nnexus_concept" href="http://mathworld.wolfram.com/PiecewiseContinuous.html">piecewise continuous</a> on every finite interval having at most a finite amount of <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">extremum</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Extremum.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/extremum"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> points and that the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">integral</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/1.4#iv"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://planetmath.org/lebesgueintegral"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -117,7 +117,7 @@ f(t)e^{\frac{-in\pi t}{p}}\,dt" display="block"><mrow><mrow><mi>f</mi><mo>⁢</m
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">converges.</p>
+<p class="ltx_p"><a class="nnexus_concept" href="http://planetmath.org/unlimitedregistermachine">converges</a>.</p>
 </div>
 <div id="S0.SS2.p2" class="ltx_para">
 <p class="ltx_p">For better to compare to the Fourier series (3) and the coefficients (4), we can write (5) as</p>
@@ -170,10 +170,10 @@ f(t)e^{\frac{-in\pi t}{p}}\,dt" display="block"><mrow><mrow><mi>f</mi><mo>⁢</m
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(9)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p"><math id="S0.SS3.p1.m2" class="ltx_Math" alttext="F(\omega)" display="inline"><mrow><mi>F</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>ω</mi><mo stretchy="false">)</mo></mrow></mrow></math> is called the <span class="ltx_text ltx_font_italic">Fourier transform</span> of <math id="S0.SS3.p1.m3" class="ltx_Math" alttext="f(t)" display="inline"><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow></math>.  It is an integral transform and (9)  its inverse transform.</p>
+<p class="ltx_p"><math id="S0.SS3.p1.m2" class="ltx_Math" alttext="F(\omega)" display="inline"><mrow><mi>F</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>ω</mi><mo stretchy="false">)</mo></mrow></mrow></math> is called the <span class="ltx_text ltx_font_italic"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Fourier transform</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/1.14#E1"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/FourierTransform.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/fouriertransform"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></span> of <math id="S0.SS3.p1.m3" class="ltx_Math" alttext="f(t)" display="inline"><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow></math>.  It is an <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">integral transform</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/1.14"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/IntegralTransform.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a></sup> and (9)  its <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">inverse</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/inversestatement"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/inversefunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/multivaluedfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <a class="nnexus_concept" href="http://mathworld.wolfram.com/Transform.html">transform</a>.</p>
 </div>
 <div id="S0.SS3.p2" class="ltx_para">
-<p class="ltx_p">N.B. that often one sees both the formula (8) and the formula (9) equipped with the same constant factor <math id="S0.SS3.p2.m1" class="ltx_Math" alttext="\displaystyle\frac{1}{\sqrt{2\pi}}" display="inline"><mstyle displaystyle="true"><mfrac><mn>1</mn><msqrt><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></msqrt></mfrac></mstyle></math> in front of the integral sign.</p>
+<p class="ltx_p">N.B. that often one sees both the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">formula</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Formula.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/logicallanguage"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/firstorderlanguage"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> (8) and the formula (9) equipped with the same constant factor <math id="S0.SS3.p2.m1" class="ltx_Math" alttext="\displaystyle\frac{1}{\sqrt{2\pi}}" display="inline"><mstyle displaystyle="true"><mfrac><mn>1</mn><msqrt><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></msqrt></mfrac></mstyle></math> in front of the integral sign.</p>
 </div>
 </section>
 <section id="bib" class="ltx_bibliography">
@@ -228,7 +228,7 @@ f(t)e^{\frac{-in\pi t}{p}}\,dt" display="block"><mrow><mrow><mi>f</mi><mo>⁢</m
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Derivation</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/derivationsinnaturaldeduction">Derivation</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
