--- a/html/42A75-AlmostPeriodicFunctionequivalentDefinition.html
+++ b/html/42A75-AlmostPeriodicFunctionequivalentDefinition.html
@@ -18,11 +18,11 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">There is an equivalent definition of almost periodic function due to Bochner:</p>
+<p class="ltx_p">There is an <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">equivalent</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Equivalent.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/filterbasis"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/equivalenceofforcingnotions"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/equivalentmachines"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/equivalencerelation"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <a class="nnexus_concept" href="http://planetmath.org/definition">definition</a> of almost periodic function due to Bochner:</p>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">A function <math id="p2.m1" class="ltx_Math" alttext="f\colon\mathbb{R}\to\mathbb{R}" display="inline"><mrow><mi>f</mi><mo>:</mo><mrow><mi>ℝ</mi><mo>→</mo><mi>ℝ</mi></mrow></mrow></math> is <em class="ltx_emph ltx_font_italic">almost periodic</em> if
-every sequence of translates of <math id="p2.m2" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> has a uniformly convergent subsequence.</p>
+<p class="ltx_p">A <a class="nnexus_concept" href="http://planetmath.org/function">function</a> <math id="p2.m1" class="ltx_Math" alttext="f\colon\mathbb{R}\to\mathbb{R}" display="inline"><mrow><mi>f</mi><mo>:</mo><mrow><mi>ℝ</mi><mo>→</mo><mi>ℝ</mi></mrow></mrow></math> is <em class="ltx_emph ltx_font_italic">almost periodic</em> if
+every <a class="nnexus_concept" href="http://planetmath.org/sequence">sequence</a> of translates of <math id="p2.m2" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> has a uniformly convergent <a class="nnexus_concept" href="http://planetmath.org/subsequence">subsequence</a>.</p>
 </div>
 <div id="p3" class="ltx_para">
 <p class="ltx_p">Not only is this definition simpler to state than that of Bohr,
@@ -36,7 +36,7 @@ but it also generalizes to functions on groups.</p>
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">almost periodic function (equivalent definition)</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">AlmostPeriodicFunctionequivalentDefinition</td>
 </tr>
 <tr class="ltx_tr">
@@ -68,7 +68,7 @@ but it also generalizes to functions on groups.</p>
 <td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">msc 42A75</td>
 </tr>
 </tbody>
