--- a/html/42B05-WirtingersInequality.html
+++ b/html/42B05-WirtingersInequality.html
@@ -20,9 +20,9 @@
 <br class="ltx_break">
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_bold">Theorem: </span>
+<p class="ltx_p"><span class="ltx_text ltx_font_bold"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Theorem.html">Theorem</a>: </span>
 Let <math id="p2.m1" class="ltx_Math" alttext="f\colon\mathbb{R}\to\mathbb{R}" display="inline"><mrow><mi>f</mi><mo>:</mo><mrow><mi>ℝ</mi><mo>→</mo><mi>ℝ</mi></mrow></mrow></math> be a periodic function of period <math id="p2.m2" class="ltx_Math" alttext="2\pi" display="inline"><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></math>, which is
-continuous and has a continuous derivative throughout <math id="p2.m3" class="ltx_Math" alttext="\mathbb{R}" display="inline"><mi>ℝ</mi></math>, and such
+<a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">continuous</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Continuous.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/classesofordinalsandenumeratingfunctions"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/continuous"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> and has a continuous <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">derivative</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/fixedpointsofnormalfunctions"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/derivative"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> throughout <math id="p2.m3" class="ltx_Math" alttext="\mathbb{R}" display="inline"><mi>ℝ</mi></math>, and such
 that</p>
 <table id="S0.E1" class="ltx_equation ltx_eqn_table">
 
@@ -57,7 +57,7 @@ can write</p>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">and moreover <math id="p3.m1" class="ltx_Math" alttext="a_{0}=0" display="inline"><mrow><msub><mi>a</mi><mn>0</mn></msub><mo>=</mo><mn>0</mn></mrow></math> by (<a href="#S0.E1" title="(1) ‣ Wirtinger’s inequality" class="ltx_ref"><span class="ltx_text ltx_ref_tag">1</span></a>). By Parseval’s identity,</p>
+<p class="ltx_p">and moreover <math id="p3.m1" class="ltx_Math" alttext="a_{0}=0" display="inline"><mrow><msub><mi>a</mi><mn>0</mn></msub><mo>=</mo><mn>0</mn></mrow></math> by (<a href="#S0.E1" title="(1) ‣ Wirtinger’s inequality" class="ltx_ref"><span class="ltx_text ltx_ref_tag">1</span></a>). By Parseval’s <a class="nnexus_concept" href="http://planetmath.org/multivaluedfunction">identity</a>,</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -79,8 +79,8 @@ can write</p>
 with equality if and only if <math id="p3.m3" class="ltx_Math" alttext="a_{n}=b_{n}=0" display="inline"><mrow><msub><mi>a</mi><mi>n</mi></msub><mo>=</mo><msub><mi>b</mi><mi>n</mi></msub><mo>=</mo><mn>0</mn></mrow></math> for all <math id="p3.m4" class="ltx_Math" alttext="n\geq 2" display="inline"><mrow><mi>n</mi><mo>≥</mo><mn>2</mn></mrow></math>.</p>
 </div>
 <div id="p4" class="ltx_para">
-<p class="ltx_p">Hurwitz used Wirtinger’s inequality in his tidy 1904
-proof of the isoperimetric inequality.
+<p class="ltx_p">Hurwitz used Wirtinger’s <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">inequality</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Inequality.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/inequalitiesforrealnumbers"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> in his tidy 1904
+proof of the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">isoperimetric inequality</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/IsoperimetricInequality.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/isoperimetricinequality"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>.
 </p>
 <table class="ltx_tabular ltx_align_right ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
@@ -126,7 +126,7 @@ proof of the isoperimetric inequality.
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Synonym</th>
-<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">Wirtinger inequality</td>
+<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r"><a class="nnexus_concept" href="http://mathworld.wolfram.com/WirtingersInequality.html">Wirtinger inequality</a></td>
 </tr>
 </tbody>
 </table>
