--- a/html/42C99-EquivalentConditionForTheTranslatesOfAnL2FunctionToFormARieszSequenceAn.html
+++ b/html/42C99-EquivalentConditionForTheTranslatesOfAnL2FunctionToFormARieszSequenceAn.html
@@ -23,8 +23,8 @@
 <h6 class="ltx_title ltx_runin ltx_font_bold ltx_title_theorem"><span class="ltx_tag ltx_tag_theorem">Theorem 1</span></h6>
 <div id="Thmtheorem1.p1" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_italic">Let <math id="Thmtheorem1.p1.m1" class="ltx_Math" alttext="\phi\in L_{2}(\mathbb{R})" display="inline"><mrow><mi>ϕ</mi><mo mathvariant="normal">∈</mo><mrow><msub><mi>L</mi><mn mathvariant="normal">2</mn></msub><mo mathvariant="italic">⁢</mo><mrow><mo mathvariant="normal" stretchy="false">(</mo><mi mathvariant="normal">R</mi><mo mathvariant="normal" stretchy="false">)</mo></mrow></mrow></mrow></math>, <math id="Thmtheorem1.p1.m2" class="ltx_Math" alttext="\phi_{k}(x)=\phi(x-k)" display="inline"><mrow><mrow><msub><mi>ϕ</mi><mi>k</mi></msub><mo mathvariant="italic">⁢</mo><mrow><mo mathvariant="normal" stretchy="false">(</mo><mi>x</mi><mo mathvariant="normal" stretchy="false">)</mo></mrow></mrow><mo mathvariant="normal">=</mo><mrow><mi>ϕ</mi><mo mathvariant="italic">⁢</mo><mrow><mo mathvariant="normal" stretchy="false">(</mo><mrow><mi>x</mi><mo mathvariant="normal">-</mo><mi>k</mi></mrow><mo mathvariant="normal" stretchy="false">)</mo></mrow></mrow></mrow></math> and
-<math id="Thmtheorem1.p1.m3" class="ltx_Math" alttext="\hat{\phi}" display="inline"><mover accent="true"><mi>ϕ</mi><mo mathvariant="normal" stretchy="false">^</mo></mover></math> be the Fourier transform of <math id="Thmtheorem1.p1.m4" class="ltx_Math" alttext="\phi" display="inline"><mi>ϕ</mi></math>. Let <math id="Thmtheorem1.p1.m5" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math> and <math id="Thmtheorem1.p1.m6" class="ltx_Math" alttext="B" display="inline"><mi>B</mi></math>
-be positive constants. Then the following are equivalent:
+<math id="Thmtheorem1.p1.m3" class="ltx_Math" alttext="\hat{\phi}" display="inline"><mover accent="true"><mi>ϕ</mi><mo mathvariant="normal" stretchy="false">^</mo></mover></math> be the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Fourier transform</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/FourierTransform.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/fouriertransform"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <math id="Thmtheorem1.p1.m4" class="ltx_Math" alttext="\phi" display="inline"><mi>ϕ</mi></math>. Let <math id="Thmtheorem1.p1.m5" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math> and <math id="Thmtheorem1.p1.m6" class="ltx_Math" alttext="B" display="inline"><mi>B</mi></math>
+be <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">positive</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/positive"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/positiveelement"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <a class="nnexus_concept" href="http://planetmath.org/logicallanguage">constants</a>. Then the following are <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">equivalent</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Equivalent.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/filterbasis"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/equivalenceofforcingnotions"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/equivalentmachines"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/equivalencerelation"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>:
 </span></p>
 <ol id="I1" class="ltx_enumerate">
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
@@ -44,17 +44,17 @@ be positive constants. Then the following are equivalent:
 </div>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">The first of the above conditions is the definition for
-<math id="p2.m1" class="ltx_Math" alttext="\{\phi_{k}\}_{k\in\mathbb{Z}}" display="inline"><msub><mrow><mo stretchy="false">{</mo><msub><mi>ϕ</mi><mi>k</mi></msub><mo stretchy="false">}</mo></mrow><mrow><mi>k</mi><mo>∈</mo><mi>ℤ</mi></mrow></msub></math> to form a Riesz sequence.
+<p class="ltx_p">The first of the above conditions is the <a class="nnexus_concept" href="http://planetmath.org/definition">definition</a> for
+<math id="p2.m1" class="ltx_Math" alttext="\{\phi_{k}\}_{k\in\mathbb{Z}}" display="inline"><msub><mrow><mo stretchy="false">{</mo><msub><mi>ϕ</mi><mi>k</mi></msub><mo stretchy="false">}</mo></mrow><mrow><mi>k</mi><mo>∈</mo><mi>ℤ</mi></mrow></msub></math> to form a <a class="nnexus_concept" href="http://planetmath.org/rieszsequence">Riesz sequence</a>.
 </p>
 <table class="ltx_tabular ltx_align_right ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">equivalent condition for the translates of an <math id="p2.m2" class="ltx_Math" alttext="L_{2}" display="inline"><msub><mi>L</mi><mn>2</mn></msub></math> function to form a Riesz sequence, an</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">equivalent condition for the translates of an <math id="p2.m2" class="ltx_Math" alttext="L_{2}" display="inline"><msub><mi>L</mi><mn>2</mn></msub></math> <a class="nnexus_concept" href="http://planetmath.org/function">function</a> to form a Riesz sequence, an</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">EquivalentConditionForTheTranslatesOfAnL2FunctionToFormARieszSequenceAn</td>
 </tr>
 <tr class="ltx_tr">
@@ -83,7 +83,7 @@ be positive constants. Then the following are equivalent:
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Theorem</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Theorem</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Theorem.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/lemma"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
